// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles boiler and thermostat metrics having overlapping entities 1`] = `
"# HELP emsesp_system_version EMS-ESP version
# TYPE emsesp_system_version gauge
emsesp_system_version{emsesp_system_version="3.7.1"} 1

# HELP emsesp_boiler_heatingoff force heating off [boolean]
# TYPE emsesp_boiler_heatingoff gauge
emsesp_boiler_heatingoff 0

# HELP emsesp_boiler_heatingactive heating active [boolean]
# TYPE emsesp_boiler_heatingactive gauge
emsesp_boiler_heatingactive 1

# HELP emsesp_boiler_tapwateractive tapwater active [boolean]
# TYPE emsesp_boiler_tapwateractive gauge
emsesp_boiler_tapwateractive 0

# HELP emsesp_boiler_selflowtemp selected flow temperature [°C]
# TYPE emsesp_boiler_selflowtemp gauge
emsesp_boiler_selflowtemp 43

# HELP emsesp_boiler_heatingpumpmod heating pump modulation [%]
# TYPE emsesp_boiler_heatingpumpmod gauge
emsesp_boiler_heatingpumpmod 0.68

# HELP emsesp_boiler_curflowtemp current flow temperature [°C]
# TYPE emsesp_boiler_curflowtemp gauge
emsesp_boiler_curflowtemp 47.9

# HELP emsesp_boiler_burngas gas [boolean]
# TYPE emsesp_boiler_burngas gauge
emsesp_boiler_burngas 1

# HELP emsesp_boiler_burngas2 gas stage 2 [boolean]
# TYPE emsesp_boiler_burngas2 gauge
emsesp_boiler_burngas2 0

# HELP emsesp_boiler_flamecurr flame current [µA]
# TYPE emsesp_boiler_flamecurr gauge
emsesp_boiler_flamecurr 21.4

# HELP emsesp_boiler_fanwork fan [boolean]
# TYPE emsesp_boiler_fanwork gauge
emsesp_boiler_fanwork 1

# HELP emsesp_boiler_ignwork ignition [boolean]
# TYPE emsesp_boiler_ignwork gauge
emsesp_boiler_ignwork 0

# HELP emsesp_boiler_oilpreheat oil preheating [boolean]
# TYPE emsesp_boiler_oilpreheat gauge
emsesp_boiler_oilpreheat 0

# HELP emsesp_boiler_burnminpower burner min power [%]
# TYPE emsesp_boiler_burnminpower gauge
emsesp_boiler_burnminpower 0

# HELP emsesp_boiler_burnmaxpower burner max power [%]
# TYPE emsesp_boiler_burnmaxpower gauge
emsesp_boiler_burnmaxpower 1

# HELP emsesp_boiler_burnminperiod burner min period [seconds]
# TYPE emsesp_boiler_burnminperiod gauge
emsesp_boiler_burnminperiod 600

# HELP emsesp_boiler_boilhyston hysteresis on temperature [°C]
# TYPE emsesp_boiler_boilhyston gauge
emsesp_boiler_boilhyston -6

# HELP emsesp_boiler_boilhystoff hysteresis off temperature [°C]
# TYPE emsesp_boiler_boilhystoff gauge
emsesp_boiler_boilhystoff 6

# HELP emsesp_boiler_boil2hyston hysteresis stage 2 on temperature [°C]
# TYPE emsesp_boiler_boil2hyston gauge
emsesp_boiler_boil2hyston 0

# HELP emsesp_boiler_boil2hystoff hysteresis stage 2 off temperature [°C]
# TYPE emsesp_boiler_boil2hystoff gauge
emsesp_boiler_boil2hystoff 0

# HELP emsesp_boiler_curveon heatingcurve on [boolean]
# TYPE emsesp_boiler_curveon gauge
emsesp_boiler_curveon 0

# HELP emsesp_boiler_curvebase heatingcurve base [°C]
# TYPE emsesp_boiler_curvebase gauge
emsesp_boiler_curvebase 20

# HELP emsesp_boiler_curveend heatingcurve end [°C]
# TYPE emsesp_boiler_curveend gauge
emsesp_boiler_curveend 90

# HELP emsesp_boiler_summertemp summer temperature [°C]
# TYPE emsesp_boiler_summertemp gauge
emsesp_boiler_summertemp 16

# HELP emsesp_boiler_nofrostmode nofrost mode [boolean]
# TYPE emsesp_boiler_nofrostmode gauge
emsesp_boiler_nofrostmode 0

# HELP emsesp_boiler_nofrosttemp nofrost temperature [°C]
# TYPE emsesp_boiler_nofrosttemp gauge
emsesp_boiler_nofrosttemp 5

# HELP emsesp_boiler_heatingactivated heating activated [boolean]
# TYPE emsesp_boiler_heatingactivated gauge
emsesp_boiler_heatingactivated 1

# HELP emsesp_boiler_heatingtemp heating temperature [°C]
# TYPE emsesp_boiler_heatingtemp gauge
emsesp_boiler_heatingtemp 48

# HELP emsesp_boiler_heatingpump heating pump [boolean]
# TYPE emsesp_boiler_heatingpump gauge
emsesp_boiler_heatingpump 1

# HELP emsesp_boiler_pumpmodmax boiler pump max power [%]
# TYPE emsesp_boiler_pumpmodmax gauge
emsesp_boiler_pumpmodmax 1

# HELP emsesp_boiler_pumpmodmin boiler pump min power [%]
# TYPE emsesp_boiler_pumpmodmin gauge
emsesp_boiler_pumpmodmin 0.1

# HELP emsesp_boiler_pumpmode boiler pump mode [enum]
# TYPE emsesp_boiler_pumpmode gauge
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="proportional"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-1"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-2"} 1
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-3"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-4"} 0

# HELP emsesp_boiler_pumpdelay pump delay [seconds]
# TYPE emsesp_boiler_pumpdelay gauge
emsesp_boiler_pumpdelay 180

# HELP emsesp_boiler_pumpontemp pump logic temperature [°C]
# TYPE emsesp_boiler_pumpontemp gauge
emsesp_boiler_pumpontemp 0

# HELP emsesp_boiler_selburnpow burner selected max power [%]
# TYPE emsesp_boiler_selburnpow gauge
emsesp_boiler_selburnpow 1

# HELP emsesp_boiler_curburnpow burner current power [%]
# TYPE emsesp_boiler_curburnpow gauge
emsesp_boiler_curburnpow 0.31

# HELP emsesp_boiler_burnstarts burner starts [number]
# TYPE emsesp_boiler_burnstarts gauge
emsesp_boiler_burnstarts 26865

# HELP emsesp_boiler_burnworkmin total burner operating time [seconds]
# TYPE emsesp_boiler_burnworkmin gauge
emsesp_boiler_burnworkmin 44337540

# HELP emsesp_boiler_burn2workmin burner stage 2 operating time [seconds]
# TYPE emsesp_boiler_burn2workmin gauge
emsesp_boiler_burn2workmin 0

# HELP emsesp_boiler_heatworkmin total heat operating time [seconds]
# TYPE emsesp_boiler_heatworkmin gauge
emsesp_boiler_heatworkmin 36560700

# HELP emsesp_boiler_heatstarts burner starts heating [number]
# TYPE emsesp_boiler_heatstarts gauge
emsesp_boiler_heatstarts 12637

# HELP emsesp_boiler_ubauptime total UBA operating time [seconds]
# TYPE emsesp_boiler_ubauptime gauge
emsesp_boiler_ubauptime 286308360

# HELP emsesp_boiler_lastcode last error code [string]
# TYPE emsesp_boiler_lastcode gauge
emsesp_boiler_lastcode{emsesp_boiler_lastcode="6L(229) 07.12.2021 08:33 (0 min)"} 1

# HELP emsesp_boiler_servicecode service code [string]
# TYPE emsesp_boiler_servicecode gauge
emsesp_boiler_servicecode{emsesp_boiler_servicecode="-H"} 1

# HELP emsesp_boiler_servicecodenumber service code number [number]
# TYPE emsesp_boiler_servicecodenumber gauge
emsesp_boiler_servicecodenumber 200

# HELP emsesp_boiler_maintenancemessage maintenance message [string]
# TYPE emsesp_boiler_maintenancemessage gauge
emsesp_boiler_maintenancemessage{emsesp_boiler_maintenancemessage="H00"} 1

# HELP emsesp_boiler_maintenance maintenance scheduled [enum]
# TYPE emsesp_boiler_maintenance gauge
emsesp_boiler_maintenance{emsesp_boiler_maintenance="off"} 1
emsesp_boiler_maintenance{emsesp_boiler_maintenance="time"} 0
emsesp_boiler_maintenance{emsesp_boiler_maintenance="date"} 0
emsesp_boiler_maintenance{emsesp_boiler_maintenance="manual"} 0

# HELP emsesp_boiler_maintenancetime time to next maintenance [hours]
# TYPE emsesp_boiler_maintenancetime gauge
emsesp_boiler_maintenancetime 6000

# HELP emsesp_boiler_maintenancedate next maintenance date [string]
# TYPE emsesp_boiler_maintenancedate gauge
emsesp_boiler_maintenancedate{emsesp_boiler_maintenancedate="25.06.2021"} 1

# HELP emsesp_boiler_dhw_settemp dhw set temperature [°C]
# TYPE emsesp_boiler_dhw_settemp gauge
emsesp_boiler_dhw_settemp 45

# HELP emsesp_boiler_dhw_seltemp dhw selected temperature [°C]
# TYPE emsesp_boiler_dhw_seltemp gauge
emsesp_boiler_dhw_seltemp 45

# HELP emsesp_boiler_dhw_type dhw type [enum]
# TYPE emsesp_boiler_dhw_type gauge
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="off"} 0
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="flow"} 0
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="buffered flow"} 0
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="buffer"} 1
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="layered buffer"} 0

# HELP emsesp_boiler_dhw_comfort dhw comfort [enum]
# TYPE emsesp_boiler_dhw_comfort gauge
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="hot"} 0
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="eco"} 1
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="intelligent"} 0

# HELP emsesp_boiler_dhw_flowtempoffset dhw flow temperature offset [°C]
# TYPE emsesp_boiler_dhw_flowtempoffset gauge
emsesp_boiler_dhw_flowtempoffset 40

# HELP emsesp_boiler_dhw_maxpower dhw max power [%]
# TYPE emsesp_boiler_dhw_maxpower gauge
emsesp_boiler_dhw_maxpower 1

# HELP emsesp_boiler_dhw_circpump dhw circulation pump available [boolean]
# TYPE emsesp_boiler_dhw_circpump gauge
emsesp_boiler_dhw_circpump 1

# HELP emsesp_boiler_dhw_chargetype dhw charging type [enum]
# TYPE emsesp_boiler_dhw_chargetype gauge
emsesp_boiler_dhw_chargetype{emsesp_boiler_dhw_chargetype="chargepump"} 0
emsesp_boiler_dhw_chargetype{emsesp_boiler_dhw_chargetype="3-way valve"} 1

# HELP emsesp_boiler_dhw_hyston dhw hysteresis on temperature [°C]
# TYPE emsesp_boiler_dhw_hyston gauge
emsesp_boiler_dhw_hyston -5

# HELP emsesp_boiler_dhw_hystoff dhw hysteresis off temperature [°C]
# TYPE emsesp_boiler_dhw_hystoff gauge
emsesp_boiler_dhw_hystoff 0

# HELP emsesp_boiler_dhw_disinfectiontemp dhw disinfection temperature [°C]
# TYPE emsesp_boiler_dhw_disinfectiontemp gauge
emsesp_boiler_dhw_disinfectiontemp 70

# HELP emsesp_boiler_dhw_circmode dhw circulation pump mode [enum]
# TYPE emsesp_boiler_dhw_circmode gauge
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="off"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="1x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="2x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="3x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="4x3min"} 1
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="5x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="6x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="continuous"} 0

# HELP emsesp_boiler_dhw_circ dhw circulation active [boolean]
# TYPE emsesp_boiler_dhw_circ gauge
emsesp_boiler_dhw_circ 0

# HELP emsesp_boiler_dhw_curtemp dhw current intern temperature [°C]
# TYPE emsesp_boiler_dhw_curtemp gauge
emsesp_boiler_dhw_curtemp 36

# HELP emsesp_boiler_dhw_curtemp2 dhw current extern temperature [°C]
# TYPE emsesp_boiler_dhw_curtemp2 gauge
emsesp_boiler_dhw_curtemp2 36

# HELP emsesp_boiler_dhw_curflow dhw current tap water flow [l/min]
# TYPE emsesp_boiler_dhw_curflow gauge
emsesp_boiler_dhw_curflow 0

# HELP emsesp_boiler_dhw_storagetemp2 dhw storage extern temperature [°C]
# TYPE emsesp_boiler_dhw_storagetemp2 gauge
emsesp_boiler_dhw_storagetemp2 35.9

# HELP emsesp_boiler_dhw_activated dhw activated [boolean]
# TYPE emsesp_boiler_dhw_activated gauge
emsesp_boiler_dhw_activated 1

# HELP emsesp_boiler_dhw_onetime dhw one time charging [boolean]
# TYPE emsesp_boiler_dhw_onetime gauge
emsesp_boiler_dhw_onetime 0

# HELP emsesp_boiler_dhw_disinfecting dhw disinfecting [boolean]
# TYPE emsesp_boiler_dhw_disinfecting gauge
emsesp_boiler_dhw_disinfecting 0

# HELP emsesp_boiler_dhw_charging dhw charging [boolean]
# TYPE emsesp_boiler_dhw_charging gauge
emsesp_boiler_dhw_charging 0

# HELP emsesp_boiler_dhw_recharging dhw recharging [boolean]
# TYPE emsesp_boiler_dhw_recharging gauge
emsesp_boiler_dhw_recharging 0

# HELP emsesp_boiler_dhw_tempok dhw temperature ok [boolean]
# TYPE emsesp_boiler_dhw_tempok gauge
emsesp_boiler_dhw_tempok 0

# HELP emsesp_boiler_dhw_active dhw active [boolean]
# TYPE emsesp_boiler_dhw_active gauge
emsesp_boiler_dhw_active 0

# HELP emsesp_boiler_dhw_3wayvalve dhw 3-way valve active [boolean]
# TYPE emsesp_boiler_dhw_3wayvalve gauge
emsesp_boiler_dhw_3wayvalve 0

# HELP emsesp_boiler_dhw_starts dhw starts [number]
# TYPE emsesp_boiler_dhw_starts gauge
emsesp_boiler_dhw_starts 14228

# HELP emsesp_boiler_dhw_workm dhw active time [seconds]
# TYPE emsesp_boiler_dhw_workm gauge
emsesp_boiler_dhw_workm 7776840

# HELP emsesp_boiler_nompower nominal Power [kW]
# TYPE emsesp_boiler_nompower gauge
emsesp_boiler_nompower 24

# HELP emsesp_boiler_nrgtotal total energy [kWh]
# TYPE emsesp_boiler_nrgtotal gauge
emsesp_boiler_nrgtotal 1102.71

# HELP emsesp_boiler_nrgheat energy heating [kWh]
# TYPE emsesp_boiler_nrgheat counter
emsesp_boiler_nrgheat 889.74

# HELP emsesp_boiler_dhw_nrg dhw energy [kWh]
# TYPE emsesp_boiler_dhw_nrg counter
emsesp_boiler_dhw_nrg 212.98

# HELP emsesp_thermostat_datetime date/time [string]
# TYPE emsesp_thermostat_datetime gauge
emsesp_thermostat_datetime{emsesp_thermostat_datetime="24.01.2025 20:47"} 1

# HELP emsesp_thermostat_intoffset internal temperature offset [°C]
# TYPE emsesp_thermostat_intoffset gauge
emsesp_thermostat_intoffset 0

# HELP emsesp_thermostat_floordry floor drying [enum]
# TYPE emsesp_thermostat_floordry gauge
emsesp_thermostat_floordry{emsesp_thermostat_floordry="off"} 1
emsesp_thermostat_floordry{emsesp_thermostat_floordry="start"} 0
emsesp_thermostat_floordry{emsesp_thermostat_floordry="heat"} 0
emsesp_thermostat_floordry{emsesp_thermostat_floordry="hold"} 0
emsesp_thermostat_floordry{emsesp_thermostat_floordry="cool"} 0
emsesp_thermostat_floordry{emsesp_thermostat_floordry="end"} 0

# HELP emsesp_thermostat_dampedoutdoortemp damped outdoor temperature [°C]
# TYPE emsesp_thermostat_dampedoutdoortemp gauge
emsesp_thermostat_dampedoutdoortemp -10

# HELP emsesp_thermostat_floordrytemp floor drying temperature [°C]
# TYPE emsesp_thermostat_floordrytemp gauge
emsesp_thermostat_floordrytemp 0

# HELP emsesp_thermostat_building building type [enum]
# TYPE emsesp_thermostat_building gauge
emsesp_thermostat_building{emsesp_thermostat_building="light"} 0
emsesp_thermostat_building{emsesp_thermostat_building="medium"} 1
emsesp_thermostat_building{emsesp_thermostat_building="heavy"} 0

# HELP emsesp_thermostat_minexttemp minimal external temperature [°C]
# TYPE emsesp_thermostat_minexttemp gauge
emsesp_thermostat_minexttemp -10

# HELP emsesp_thermostat_damping damping outdoor temperature [boolean]
# TYPE emsesp_thermostat_damping gauge
emsesp_thermostat_damping 1

# HELP emsesp_thermostat_hc1_seltemp hc1 selected room temperature [°C]
# TYPE emsesp_thermostat_hc1_seltemp gauge
emsesp_thermostat_hc1_seltemp 22

# HELP emsesp_thermostat_hc1_currtemp hc1 current room temperature [°C]
# TYPE emsesp_thermostat_hc1_currtemp gauge
emsesp_thermostat_hc1_currtemp 22.7

# HELP emsesp_thermostat_hc1_haclimate hc1 mqtt discovery current room temperature [enum]
# TYPE emsesp_thermostat_hc1_haclimate gauge
emsesp_thermostat_hc1_haclimate{emsesp_thermostat_hc1_haclimate="selTemp"} 0
emsesp_thermostat_hc1_haclimate{emsesp_thermostat_hc1_haclimate="roomTemp"} 1

# HELP emsesp_thermostat_hc1_mode hc1 operating mode [enum]
# TYPE emsesp_thermostat_hc1_mode gauge
emsesp_thermostat_hc1_mode{emsesp_thermostat_hc1_mode="manual"} 0
emsesp_thermostat_hc1_mode{emsesp_thermostat_hc1_mode="auto"} 1

# HELP emsesp_thermostat_hc1_modetype hc1 mode type [enum]
# TYPE emsesp_thermostat_hc1_modetype gauge
emsesp_thermostat_hc1_modetype{emsesp_thermostat_hc1_modetype="eco"} 0
emsesp_thermostat_hc1_modetype{emsesp_thermostat_hc1_modetype="comfort"} 1

# HELP emsesp_thermostat_hc1_ecotemp hc1 eco temperature [°C]
# TYPE emsesp_thermostat_hc1_ecotemp gauge
emsesp_thermostat_hc1_ecotemp 21

# HELP emsesp_thermostat_hc1_manualtemp hc1 manual temperature [°C]
# TYPE emsesp_thermostat_hc1_manualtemp gauge
emsesp_thermostat_hc1_manualtemp 20.5

# HELP emsesp_thermostat_hc1_comforttemp hc1 comfort temperature [°C]
# TYPE emsesp_thermostat_hc1_comforttemp gauge
emsesp_thermostat_hc1_comforttemp 22

# HELP emsesp_thermostat_hc1_summertemp hc1 summer temperature [°C]
# TYPE emsesp_thermostat_hc1_summertemp gauge
emsesp_thermostat_hc1_summertemp 17

# HELP emsesp_thermostat_hc1_designtemp hc1 design temperature [°C]
# TYPE emsesp_thermostat_hc1_designtemp gauge
emsesp_thermostat_hc1_designtemp 75

# HELP emsesp_thermostat_hc1_offsettemp hc1 offset temperature [°C]
# TYPE emsesp_thermostat_hc1_offsettemp gauge
emsesp_thermostat_hc1_offsettemp 0

# HELP emsesp_thermostat_hc1_minflowtemp hc1 min flow temperature [°C]
# TYPE emsesp_thermostat_hc1_minflowtemp gauge
emsesp_thermostat_hc1_minflowtemp 25

# HELP emsesp_thermostat_hc1_maxflowtemp hc1 max flow temperature [°C]
# TYPE emsesp_thermostat_hc1_maxflowtemp gauge
emsesp_thermostat_hc1_maxflowtemp 65

# HELP emsesp_thermostat_hc1_roominfluence hc1 room influence [°C]
# TYPE emsesp_thermostat_hc1_roominfluence gauge
emsesp_thermostat_hc1_roominfluence 3

# HELP emsesp_thermostat_hc1_roominflfactor hc1 room influence factor [number]
# TYPE emsesp_thermostat_hc1_roominflfactor gauge
emsesp_thermostat_hc1_roominflfactor 4

# HELP emsesp_thermostat_hc1_curroominfl hc1 current room influence [°C]
# TYPE emsesp_thermostat_hc1_curroominfl gauge
emsesp_thermostat_hc1_curroominfl 0

# HELP emsesp_thermostat_hc1_nofrostmode hc1 nofrost mode [enum]
# TYPE emsesp_thermostat_hc1_nofrostmode gauge
emsesp_thermostat_hc1_nofrostmode{emsesp_thermostat_hc1_nofrostmode="room"} 1
emsesp_thermostat_hc1_nofrostmode{emsesp_thermostat_hc1_nofrostmode="outdoor"} 0
emsesp_thermostat_hc1_nofrostmode{emsesp_thermostat_hc1_nofrostmode="room outdoor"} 0

# HELP emsesp_thermostat_hc1_nofrosttemp hc1 nofrost temperature [°C]
# TYPE emsesp_thermostat_hc1_nofrosttemp gauge
emsesp_thermostat_hc1_nofrosttemp 5

# HELP emsesp_thermostat_hc1_targetflowtemp hc1 target flow temperature [°C]
# TYPE emsesp_thermostat_hc1_targetflowtemp gauge
emsesp_thermostat_hc1_targetflowtemp 42

# HELP emsesp_thermostat_hc1_heatingtype hc1 heating type [enum]
# TYPE emsesp_thermostat_hc1_heatingtype gauge
emsesp_thermostat_hc1_heatingtype{emsesp_thermostat_hc1_heatingtype="off"} 0
emsesp_thermostat_hc1_heatingtype{emsesp_thermostat_hc1_heatingtype="radiator"} 1
emsesp_thermostat_hc1_heatingtype{emsesp_thermostat_hc1_heatingtype="convector"} 0
emsesp_thermostat_hc1_heatingtype{emsesp_thermostat_hc1_heatingtype="floor"} 0

# HELP emsesp_thermostat_hc1_summersetmode hc1 set summer mode [enum]
# TYPE emsesp_thermostat_hc1_summersetmode gauge
emsesp_thermostat_hc1_summersetmode{emsesp_thermostat_hc1_summersetmode="summer"} 0
emsesp_thermostat_hc1_summersetmode{emsesp_thermostat_hc1_summersetmode="auto"} 1
emsesp_thermostat_hc1_summersetmode{emsesp_thermostat_hc1_summersetmode="winter"} 0

# HELP emsesp_thermostat_hc1_summermode hc1 summer mode [enum]
# TYPE emsesp_thermostat_hc1_summermode gauge
emsesp_thermostat_hc1_summermode{emsesp_thermostat_hc1_summermode="winter"} 1
emsesp_thermostat_hc1_summermode{emsesp_thermostat_hc1_summermode="summer"} 0

# HELP emsesp_thermostat_hc1_controlmode hc1 control mode [enum]
# TYPE emsesp_thermostat_hc1_controlmode gauge
emsesp_thermostat_hc1_controlmode{emsesp_thermostat_hc1_controlmode="weather compensated"} 0
emsesp_thermostat_hc1_controlmode{emsesp_thermostat_hc1_controlmode="outside basepoint"} 0
emsesp_thermostat_hc1_controlmode{emsesp_thermostat_hc1_controlmode="n/a"} 0
emsesp_thermostat_hc1_controlmode{emsesp_thermostat_hc1_controlmode="room"} 1
emsesp_thermostat_hc1_controlmode{emsesp_thermostat_hc1_controlmode="power"} 0
emsesp_thermostat_hc1_controlmode{emsesp_thermostat_hc1_controlmode="constant"} 0

# HELP emsesp_thermostat_hc1_program hc1 program [enum]
# TYPE emsesp_thermostat_hc1_program gauge
emsesp_thermostat_hc1_program{emsesp_thermostat_hc1_program="prog 1"} 0
emsesp_thermostat_hc1_program{emsesp_thermostat_hc1_program="prog 2"} 1

# HELP emsesp_thermostat_hc1_tempautotemp hc1 temporary set temperature automode [°C]
# TYPE emsesp_thermostat_hc1_tempautotemp gauge
emsesp_thermostat_hc1_tempautotemp 22

# HELP emsesp_thermostat_hc1_fastheatup hc1 fast heatup [%]
# TYPE emsesp_thermostat_hc1_fastheatup gauge
emsesp_thermostat_hc1_fastheatup 0

# HELP emsesp_thermostat_hc1_switchonoptimization hc1 switch-on optimization [boolean]
# TYPE emsesp_thermostat_hc1_switchonoptimization gauge
emsesp_thermostat_hc1_switchonoptimization 0

# HELP emsesp_thermostat_hc1_reducemode hc1 reduce mode [enum]
# TYPE emsesp_thermostat_hc1_reducemode gauge
emsesp_thermostat_hc1_reducemode{emsesp_thermostat_hc1_reducemode="outdoor"} 0
emsesp_thermostat_hc1_reducemode{emsesp_thermostat_hc1_reducemode="room"} 0
emsesp_thermostat_hc1_reducemode{emsesp_thermostat_hc1_reducemode="reduce"} 1

# HELP emsesp_thermostat_hc1_noreducetemp hc1 no reduce below temperature [°C]
# TYPE emsesp_thermostat_hc1_noreducetemp gauge
emsesp_thermostat_hc1_noreducetemp -31

# HELP emsesp_thermostat_hc1_reducetemp hc1 off/reduce switch temperature [°C]
# TYPE emsesp_thermostat_hc1_reducetemp gauge
emsesp_thermostat_hc1_reducetemp 5

# HELP emsesp_thermostat_hc1_coolingon hc1 cooling on [boolean]
# TYPE emsesp_thermostat_hc1_coolingon gauge
emsesp_thermostat_hc1_coolingon 1

# HELP emsesp_thermostat_hc1_hpmode hc1 HP Mode [enum]
# TYPE emsesp_thermostat_hc1_hpmode gauge
emsesp_thermostat_hc1_hpmode{emsesp_thermostat_hc1_hpmode="heating"} 1
emsesp_thermostat_hc1_hpmode{emsesp_thermostat_hc1_hpmode="cooling"} 0
emsesp_thermostat_hc1_hpmode{emsesp_thermostat_hc1_hpmode="heating & cooling"} 0

# HELP emsesp_thermostat_hc1_control hc1 control device [enum]
# TYPE emsesp_thermostat_hc1_control gauge
emsesp_thermostat_hc1_control{emsesp_thermostat_hc1_control="RC310"} 1
emsesp_thermostat_hc1_control{emsesp_thermostat_hc1_control="RC200"} 0
emsesp_thermostat_hc1_control{emsesp_thermostat_hc1_control="RC100"} 0
emsesp_thermostat_hc1_control{emsesp_thermostat_hc1_control="RC100H"} 0
emsesp_thermostat_hc1_control{emsesp_thermostat_hc1_control="TC100"} 0

# HELP emsesp_thermostat_dhw_mode dhw operating mode [enum]
# TYPE emsesp_thermostat_dhw_mode gauge
emsesp_thermostat_dhw_mode{emsesp_thermostat_dhw_mode="off"} 0
emsesp_thermostat_dhw_mode{emsesp_thermostat_dhw_mode="normal"} 0
emsesp_thermostat_dhw_mode{emsesp_thermostat_dhw_mode="comfort"} 0
emsesp_thermostat_dhw_mode{emsesp_thermostat_dhw_mode="auto"} 1
emsesp_thermostat_dhw_mode{emsesp_thermostat_dhw_mode="own prog"} 0

# HELP emsesp_thermostat_dhw_circmode dhw circulation pump mode [enum]
# TYPE emsesp_thermostat_dhw_circmode gauge
emsesp_thermostat_dhw_circmode{emsesp_thermostat_dhw_circmode="off"} 0
emsesp_thermostat_dhw_circmode{emsesp_thermostat_dhw_circmode="on"} 0
emsesp_thermostat_dhw_circmode{emsesp_thermostat_dhw_circmode="auto"} 0
emsesp_thermostat_dhw_circmode{emsesp_thermostat_dhw_circmode="own prog"} 1

# HELP emsesp_thermostat_dhw_chargeduration dhw charge duration [seconds]
# TYPE emsesp_thermostat_dhw_chargeduration gauge
emsesp_thermostat_dhw_chargeduration 1800

# HELP emsesp_thermostat_dhw_charge dhw charge [boolean]
# TYPE emsesp_thermostat_dhw_charge gauge
emsesp_thermostat_dhw_charge 0

# HELP emsesp_thermostat_dhw_extra dhw extra [boolean]
# TYPE emsesp_thermostat_dhw_extra gauge
emsesp_thermostat_dhw_extra 0

# HELP emsesp_thermostat_dhw_disinfecting dhw disinfecting [boolean]
# TYPE emsesp_thermostat_dhw_disinfecting gauge
emsesp_thermostat_dhw_disinfecting 0

# HELP emsesp_thermostat_dhw_disinfectday dhw disinfection day [enum]
# TYPE emsesp_thermostat_dhw_disinfectday gauge
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="mo"} 0
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="tu"} 1
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="we"} 0
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="th"} 0
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="fr"} 0
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="sa"} 0
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="su"} 0
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="all"} 0

# HELP emsesp_thermostat_dhw_disinfecttime dhw disinfection time [seconds]
# TYPE emsesp_thermostat_dhw_disinfecttime gauge
emsesp_thermostat_dhw_disinfecttime 7200

# HELP emsesp_thermostat_dhw_dailyheating dhw daily heating [boolean]
# TYPE emsesp_thermostat_dhw_dailyheating gauge
emsesp_thermostat_dhw_dailyheating 0

# HELP emsesp_thermostat_dhw_dailyheattime dhw daily heating time [seconds]
# TYPE emsesp_thermostat_dhw_dailyheattime gauge
emsesp_thermostat_dhw_dailyheattime 7200
"
`;

exports[`handles device metrics v3.5 1`] = `
"# HELP emsesp_boiler_wwsettemp set temperature [C]
# TYPE emsesp_boiler_wwsettemp gauge
emsesp_boiler_wwsettemp 61

# HELP emsesp_boiler_wwseltemp selected temperature [C]
# TYPE emsesp_boiler_wwseltemp gauge
emsesp_boiler_wwseltemp 60

# HELP emsesp_boiler_wwtype type [enum]
# TYPE emsesp_boiler_wwtype gauge
emsesp_boiler_wwtype{emsesp_boiler_wwtype="off"} 0
emsesp_boiler_wwtype{emsesp_boiler_wwtype="flow"} 0
emsesp_boiler_wwtype{emsesp_boiler_wwtype="buffered flow"} 0
emsesp_boiler_wwtype{emsesp_boiler_wwtype="buffer"} 1
emsesp_boiler_wwtype{emsesp_boiler_wwtype="layered buffer"} 0

# HELP emsesp_boiler_wwcomfort comfort [enum]
# TYPE emsesp_boiler_wwcomfort gauge
emsesp_boiler_wwcomfort{emsesp_boiler_wwcomfort="hot"} 1
emsesp_boiler_wwcomfort{emsesp_boiler_wwcomfort="eco"} 0
emsesp_boiler_wwcomfort{emsesp_boiler_wwcomfort="intelligent"} 0

# HELP emsesp_boiler_wwflowtempoffset flow temperature offset [C]
# TYPE emsesp_boiler_wwflowtempoffset gauge
emsesp_boiler_wwflowtempoffset 20

# HELP emsesp_boiler_wwcircpump circulation pump available [boolean]
# TYPE emsesp_boiler_wwcircpump gauge
emsesp_boiler_wwcircpump 1

# HELP emsesp_boiler_wwchargetype charging type [enum]
# TYPE emsesp_boiler_wwchargetype gauge
emsesp_boiler_wwchargetype{emsesp_boiler_wwchargetype="chargepump"} 0
emsesp_boiler_wwchargetype{emsesp_boiler_wwchargetype="3-way valve"} 1

# HELP emsesp_boiler_wwhyston hysteresis on temperature [C]
# TYPE emsesp_boiler_wwhyston gauge
emsesp_boiler_wwhyston -11

# HELP emsesp_boiler_wwhystoff hysteresis off temperature [C]
# TYPE emsesp_boiler_wwhystoff gauge
emsesp_boiler_wwhystoff 0

# HELP emsesp_boiler_wwdisinfectiontemp disinfection temperature [C]
# TYPE emsesp_boiler_wwdisinfectiontemp gauge
emsesp_boiler_wwdisinfectiontemp 70

# HELP emsesp_boiler_wwcircmode circulation pump mode [enum]
# TYPE emsesp_boiler_wwcircmode gauge
emsesp_boiler_wwcircmode{emsesp_boiler_wwcircmode="1x3min"} 0
emsesp_boiler_wwcircmode{emsesp_boiler_wwcircmode="2x3min"} 1
emsesp_boiler_wwcircmode{emsesp_boiler_wwcircmode="3x3min"} 0
emsesp_boiler_wwcircmode{emsesp_boiler_wwcircmode="4x3min"} 0
emsesp_boiler_wwcircmode{emsesp_boiler_wwcircmode="5x3min"} 0
emsesp_boiler_wwcircmode{emsesp_boiler_wwcircmode="6x3min"} 0
emsesp_boiler_wwcircmode{emsesp_boiler_wwcircmode="continuous"} 0

# HELP emsesp_boiler_wwcirc circulation active [boolean]
# TYPE emsesp_boiler_wwcirc gauge
emsesp_boiler_wwcirc 0

# HELP emsesp_boiler_wwcurtemp current intern temperature [C]
# TYPE emsesp_boiler_wwcurtemp gauge
emsesp_boiler_wwcurtemp 43.3

# HELP emsesp_boiler_wwcurtemp2 current extern temperature [C]
# TYPE emsesp_boiler_wwcurtemp2 gauge
emsesp_boiler_wwcurtemp2 58.9

# HELP emsesp_boiler_wwcurflow current tap water flow [l/min]
# TYPE emsesp_boiler_wwcurflow gauge
emsesp_boiler_wwcurflow 0

# HELP emsesp_boiler_wwstoragetemp1 storage intern temperature [C]
# TYPE emsesp_boiler_wwstoragetemp1 gauge
emsesp_boiler_wwstoragetemp1 43.3

# HELP emsesp_boiler_wwstoragetemp2 storage extern temperature [C]
# TYPE emsesp_boiler_wwstoragetemp2 gauge
emsesp_boiler_wwstoragetemp2 58.9

# HELP emsesp_boiler_wwactivated activated [boolean]
# TYPE emsesp_boiler_wwactivated gauge
emsesp_boiler_wwactivated 1

# HELP emsesp_boiler_wwonetime one time charging [boolean]
# TYPE emsesp_boiler_wwonetime gauge
emsesp_boiler_wwonetime 0

# HELP emsesp_boiler_wwdisinfecting disinfecting [boolean]
# TYPE emsesp_boiler_wwdisinfecting gauge
emsesp_boiler_wwdisinfecting 0

# HELP emsesp_boiler_wwcharging charging [boolean]
# TYPE emsesp_boiler_wwcharging gauge
emsesp_boiler_wwcharging 0

# HELP emsesp_boiler_wwrecharging recharging [boolean]
# TYPE emsesp_boiler_wwrecharging gauge
emsesp_boiler_wwrecharging 0

# HELP emsesp_boiler_wwtempok temperature ok [boolean]
# TYPE emsesp_boiler_wwtempok gauge
emsesp_boiler_wwtempok 1

# HELP emsesp_boiler_wwactive active [boolean]
# TYPE emsesp_boiler_wwactive gauge
emsesp_boiler_wwactive 0

# HELP emsesp_boiler_ww3wayvalve 3-way valve active [boolean]
# TYPE emsesp_boiler_ww3wayvalve gauge
emsesp_boiler_ww3wayvalve 0

# HELP emsesp_boiler_wwstarts starts [number]
# TYPE emsesp_boiler_wwstarts counter
emsesp_boiler_wwstarts 29519

# HELP emsesp_boiler_wwworkm active time [seconds]
# TYPE emsesp_boiler_wwworkm counter
emsesp_boiler_wwworkm 11561640

# HELP emsesp_boiler_heatingactive heating active [boolean]
# TYPE emsesp_boiler_heatingactive gauge
emsesp_boiler_heatingactive 0

# HELP emsesp_boiler_tapwateractive tapwater active [boolean]
# TYPE emsesp_boiler_tapwateractive gauge
emsesp_boiler_tapwateractive 0

# HELP emsesp_boiler_selflowtemp selected flow temperature [C]
# TYPE emsesp_boiler_selflowtemp gauge
emsesp_boiler_selflowtemp 20

# HELP emsesp_boiler_heatingpumpmod heating pump modulation [%]
# TYPE emsesp_boiler_heatingpumpmod gauge
emsesp_boiler_heatingpumpmod 0.6

# HELP emsesp_boiler_curflowtemp current flow temperature [C]
# TYPE emsesp_boiler_curflowtemp gauge
emsesp_boiler_curflowtemp 25.3

# HELP emsesp_boiler_rettemp return temperature [C]
# TYPE emsesp_boiler_rettemp gauge
emsesp_boiler_rettemp 25.5

# HELP emsesp_boiler_switchtemp mixing switch temperature [C]
# TYPE emsesp_boiler_switchtemp gauge
emsesp_boiler_switchtemp 0

# HELP emsesp_boiler_syspress system pressure [bar]
# TYPE emsesp_boiler_syspress gauge
emsesp_boiler_syspress 0.9

# HELP emsesp_boiler_boiltemp actual boiler temperature [C]
# TYPE emsesp_boiler_boiltemp gauge
emsesp_boiler_boiltemp 24.1

# HELP emsesp_boiler_burngas gas [boolean]
# TYPE emsesp_boiler_burngas gauge
emsesp_boiler_burngas 0

# HELP emsesp_boiler_burngas2 gas stage 2 [boolean]
# TYPE emsesp_boiler_burngas2 gauge
emsesp_boiler_burngas2 0

# HELP emsesp_boiler_flamecurr flame current [µA]
# TYPE emsesp_boiler_flamecurr gauge
emsesp_boiler_flamecurr 0

# HELP emsesp_boiler_heatingpump heating pump [boolean]
# TYPE emsesp_boiler_heatingpump gauge
emsesp_boiler_heatingpump 1

# HELP emsesp_boiler_fanwork fan [boolean]
# TYPE emsesp_boiler_fanwork gauge
emsesp_boiler_fanwork 0

# HELP emsesp_boiler_ignwork ignition [boolean]
# TYPE emsesp_boiler_ignwork gauge
emsesp_boiler_ignwork 0

# HELP emsesp_boiler_oilpreheat oil preheating [boolean]
# TYPE emsesp_boiler_oilpreheat gauge
emsesp_boiler_oilpreheat 0

# HELP emsesp_boiler_heatingactivated heating activated [boolean]
# TYPE emsesp_boiler_heatingactivated gauge
emsesp_boiler_heatingactivated 1

# HELP emsesp_boiler_heatingtemp heating temperature [C]
# TYPE emsesp_boiler_heatingtemp gauge
emsesp_boiler_heatingtemp 80

# HELP emsesp_boiler_pumpmodmax boiler pump max power [%]
# TYPE emsesp_boiler_pumpmodmax gauge
emsesp_boiler_pumpmodmax 1

# HELP emsesp_boiler_pumpmodmin boiler pump min power [%]
# TYPE emsesp_boiler_pumpmodmin gauge
emsesp_boiler_pumpmodmin 0.6

# HELP emsesp_boiler_pumpmode pump mode [enum]
# TYPE emsesp_boiler_pumpmode gauge
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="proportional"} 1
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-1"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-2"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-3"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-4"} 0

# HELP emsesp_boiler_pumpdelay pump delay [seconds]
# TYPE emsesp_boiler_pumpdelay gauge
emsesp_boiler_pumpdelay 720

# HELP emsesp_boiler_burnminperiod burner min period [seconds]
# TYPE emsesp_boiler_burnminperiod gauge
emsesp_boiler_burnminperiod 600

# HELP emsesp_boiler_burnminpower burner min power [%]
# TYPE emsesp_boiler_burnminpower gauge
emsesp_boiler_burnminpower 0

# HELP emsesp_boiler_burnmaxpower burner max power [%]
# TYPE emsesp_boiler_burnmaxpower gauge
emsesp_boiler_burnmaxpower 0.8

# HELP emsesp_boiler_boilhyston hysteresis on temperature [C]
# TYPE emsesp_boiler_boilhyston gauge
emsesp_boiler_boilhyston -6

# HELP emsesp_boiler_boilhystoff hysteresis off temperature [C]
# TYPE emsesp_boiler_boilhystoff gauge
emsesp_boiler_boilhystoff 6

# HELP emsesp_boiler_selburnpow burner selected max power [%]
# TYPE emsesp_boiler_selburnpow gauge
emsesp_boiler_selburnpow 0.8

# HELP emsesp_boiler_curburnpow burner current power [%]
# TYPE emsesp_boiler_curburnpow gauge
emsesp_boiler_curburnpow 0

# HELP emsesp_boiler_burnstarts burner starts [number]
# TYPE emsesp_boiler_burnstarts counter
emsesp_boiler_burnstarts 136369

# HELP emsesp_boiler_burnworkmin total burner operating time [seconds]
# TYPE emsesp_boiler_burnworkmin counter
emsesp_boiler_burnworkmin 71042640

# HELP emsesp_boiler_burn2workmin burner stage 2 operating time [seconds]
# TYPE emsesp_boiler_burn2workmin counter
emsesp_boiler_burn2workmin 0

# HELP emsesp_boiler_heatworkmin total heat operating time [seconds]
# TYPE emsesp_boiler_heatworkmin counter
emsesp_boiler_heatworkmin 59481000

# HELP emsesp_boiler_heatstarts burner starts heating [number]
# TYPE emsesp_boiler_heatstarts counter
emsesp_boiler_heatstarts 106850

# HELP emsesp_boiler_ubauptime total UBA operating time [seconds]
# TYPE emsesp_boiler_ubauptime counter
emsesp_boiler_ubauptime 536363100

# HELP emsesp_boiler_servicecode service code [string]
# TYPE emsesp_boiler_servicecode gauge
emsesp_boiler_servicecode{emsesp_boiler_servicecode="0Y"} 1

# HELP emsesp_boiler_servicecodenumber service code number [number]
# TYPE emsesp_boiler_servicecodenumber gauge
emsesp_boiler_servicecodenumber 204

# HELP emsesp_boiler_maintenancemessage maintenance message [string]
# TYPE emsesp_boiler_maintenancemessage gauge
emsesp_boiler_maintenancemessage{emsesp_boiler_maintenancemessage="H00"} 1

# HELP emsesp_boiler_maintenance maintenance scheduled [enum]
# TYPE emsesp_boiler_maintenance gauge
emsesp_boiler_maintenance{emsesp_boiler_maintenance="off"} 1
emsesp_boiler_maintenance{emsesp_boiler_maintenance="time"} 0
emsesp_boiler_maintenance{emsesp_boiler_maintenance="date"} 0
emsesp_boiler_maintenance{emsesp_boiler_maintenance="manual"} 0

# HELP emsesp_boiler_maintenancetime time to next maintenance [hours]
# TYPE emsesp_boiler_maintenancetime gauge
emsesp_boiler_maintenancetime 6000

# HELP emsesp_boiler_maintenancedate next maintenance date [string]
# TYPE emsesp_boiler_maintenancedate gauge
emsesp_boiler_maintenancedate{emsesp_boiler_maintenancedate="01.01.2004"} 1
"
`;

exports[`handles device metrics v3.7 1`] = `
"# HELP emsesp_boiler_heatingoff force heating off [boolean]
# TYPE emsesp_boiler_heatingoff gauge
emsesp_boiler_heatingoff 0

# HELP emsesp_boiler_heatingactive heating active [boolean]
# TYPE emsesp_boiler_heatingactive gauge
emsesp_boiler_heatingactive 1

# HELP emsesp_boiler_tapwateractive tapwater active [boolean]
# TYPE emsesp_boiler_tapwateractive gauge
emsesp_boiler_tapwateractive 0

# HELP emsesp_boiler_selflowtemp selected flow temperature [C]
# TYPE emsesp_boiler_selflowtemp gauge
emsesp_boiler_selflowtemp 70

# HELP emsesp_boiler_heatingpumpmod heating pump modulation [%]
# TYPE emsesp_boiler_heatingpumpmod gauge
emsesp_boiler_heatingpumpmod 0.71

# HELP emsesp_boiler_curflowtemp current flow temperature [C]
# TYPE emsesp_boiler_curflowtemp gauge
emsesp_boiler_curflowtemp 70.1

# HELP emsesp_boiler_rettemp return temperature [C]
# TYPE emsesp_boiler_rettemp gauge
emsesp_boiler_rettemp 58.7

# HELP emsesp_boiler_switchtemp mixing switch temperature [C]
# TYPE emsesp_boiler_switchtemp gauge
emsesp_boiler_switchtemp 0

# HELP emsesp_boiler_syspress system pressure [bar]
# TYPE emsesp_boiler_syspress gauge
emsesp_boiler_syspress 1.5

# HELP emsesp_boiler_boiltemp actual boiler temperature [C]
# TYPE emsesp_boiler_boiltemp gauge
emsesp_boiler_boiltemp 66.4

# HELP emsesp_boiler_burngas gas [boolean]
# TYPE emsesp_boiler_burngas gauge
emsesp_boiler_burngas 1

# HELP emsesp_boiler_burngas2 gas stage 2 [boolean]
# TYPE emsesp_boiler_burngas2 gauge
emsesp_boiler_burngas2 0

# HELP emsesp_boiler_flamecurr flame current [µA]
# TYPE emsesp_boiler_flamecurr gauge
emsesp_boiler_flamecurr 23

# HELP emsesp_boiler_fanwork fan [boolean]
# TYPE emsesp_boiler_fanwork gauge
emsesp_boiler_fanwork 1

# HELP emsesp_boiler_ignwork ignition [boolean]
# TYPE emsesp_boiler_ignwork gauge
emsesp_boiler_ignwork 0

# HELP emsesp_boiler_oilpreheat oil preheating [boolean]
# TYPE emsesp_boiler_oilpreheat gauge
emsesp_boiler_oilpreheat 0

# HELP emsesp_boiler_burnminpower burner min power [%]
# TYPE emsesp_boiler_burnminpower gauge
emsesp_boiler_burnminpower 0

# HELP emsesp_boiler_burnmaxpower burner max power [%]
# TYPE emsesp_boiler_burnmaxpower gauge
emsesp_boiler_burnmaxpower 0.8

# HELP emsesp_boiler_burnminperiod burner min period [seconds]
# TYPE emsesp_boiler_burnminperiod gauge
emsesp_boiler_burnminperiod 600

# HELP emsesp_boiler_boilhyston hysteresis on temperature [C]
# TYPE emsesp_boiler_boilhyston gauge
emsesp_boiler_boilhyston -6

# HELP emsesp_boiler_boilhystoff hysteresis off temperature [C]
# TYPE emsesp_boiler_boilhystoff gauge
emsesp_boiler_boilhystoff 6

# HELP emsesp_boiler_heatingactivated heating activated [boolean]
# TYPE emsesp_boiler_heatingactivated gauge
emsesp_boiler_heatingactivated 1

# HELP emsesp_boiler_heatingtemp heating temperature [C]
# TYPE emsesp_boiler_heatingtemp gauge
emsesp_boiler_heatingtemp 80

# HELP emsesp_boiler_heatingpump heating pump [boolean]
# TYPE emsesp_boiler_heatingpump gauge
emsesp_boiler_heatingpump 1

# HELP emsesp_boiler_pumpmodmax boiler pump max power [%]
# TYPE emsesp_boiler_pumpmodmax gauge
emsesp_boiler_pumpmodmax 1

# HELP emsesp_boiler_pumpmodmin boiler pump min power [%]
# TYPE emsesp_boiler_pumpmodmin gauge
emsesp_boiler_pumpmodmin 0.6

# HELP emsesp_boiler_pumpmode boiler pump mode [enum]
# TYPE emsesp_boiler_pumpmode gauge
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="proportional"} 1
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-1"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-2"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-3"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-4"} 0

# HELP emsesp_boiler_pumpdelay pump delay [seconds]
# TYPE emsesp_boiler_pumpdelay gauge
emsesp_boiler_pumpdelay 720

# HELP emsesp_boiler_selburnpow burner selected max power [%]
# TYPE emsesp_boiler_selburnpow gauge
emsesp_boiler_selburnpow 0.8

# HELP emsesp_boiler_curburnpow burner current power [%]
# TYPE emsesp_boiler_curburnpow gauge
emsesp_boiler_curburnpow 0.34

# HELP emsesp_boiler_burnstarts burner starts [number]
# TYPE emsesp_boiler_burnstarts counter
emsesp_boiler_burnstarts 136570

# HELP emsesp_boiler_burnworkmin total burner operating time [seconds]
# TYPE emsesp_boiler_burnworkmin counter
emsesp_boiler_burnworkmin 71338620

# HELP emsesp_boiler_burn2workmin burner stage 2 operating time [seconds]
# TYPE emsesp_boiler_burn2workmin counter
emsesp_boiler_burn2workmin 0

# HELP emsesp_boiler_heatworkmin total heat operating time [seconds]
# TYPE emsesp_boiler_heatworkmin counter
emsesp_boiler_heatworkmin 59763600

# HELP emsesp_boiler_heatstarts burner starts heating [number]
# TYPE emsesp_boiler_heatstarts counter
emsesp_boiler_heatstarts 107037

# HELP emsesp_boiler_ubauptime total UBA operating time [seconds]
# TYPE emsesp_boiler_ubauptime counter
emsesp_boiler_ubauptime 536968800

# HELP emsesp_boiler_servicecode service code [string]
# TYPE emsesp_boiler_servicecode gauge
emsesp_boiler_servicecode{emsesp_boiler_servicecode="-H"} 1

# HELP emsesp_boiler_servicecodenumber service code number [number]
# TYPE emsesp_boiler_servicecodenumber gauge
emsesp_boiler_servicecodenumber 200

# HELP emsesp_boiler_maintenancemessage maintenance message [string]
# TYPE emsesp_boiler_maintenancemessage gauge
emsesp_boiler_maintenancemessage{emsesp_boiler_maintenancemessage="H00"} 1

# HELP emsesp_boiler_maintenance maintenance scheduled [enum]
# TYPE emsesp_boiler_maintenance gauge
emsesp_boiler_maintenance{emsesp_boiler_maintenance="off"} 1
emsesp_boiler_maintenance{emsesp_boiler_maintenance="time"} 0
emsesp_boiler_maintenance{emsesp_boiler_maintenance="date"} 0
emsesp_boiler_maintenance{emsesp_boiler_maintenance="manual"} 0

# HELP emsesp_boiler_maintenancetime time to next maintenance [hours]
# TYPE emsesp_boiler_maintenancetime gauge
emsesp_boiler_maintenancetime 6000

# HELP emsesp_boiler_maintenancedate next maintenance date [string]
# TYPE emsesp_boiler_maintenancedate gauge
emsesp_boiler_maintenancedate{emsesp_boiler_maintenancedate="01.01.2004"} 1

# HELP emsesp_boiler_nompower nominal Power [kW]
# TYPE emsesp_boiler_nompower gauge
emsesp_boiler_nompower 30

# HELP emsesp_boiler_nrgtotal total energy [kWh]
# TYPE emsesp_boiler_nrgtotal counter
emsesp_boiler_nrgtotal 2.25

# HELP emsesp_boiler_nrgheat energy heating [kWh]
# TYPE emsesp_boiler_nrgheat counter
emsesp_boiler_nrgheat 2.25

# HELP emsesp_boiler_dhw_settemp set temperature [C]
# TYPE emsesp_boiler_dhw_settemp gauge
emsesp_boiler_dhw_settemp 61

# HELP emsesp_boiler_dhw_seltemp selected temperature [C]
# TYPE emsesp_boiler_dhw_seltemp gauge
emsesp_boiler_dhw_seltemp 60

# HELP emsesp_boiler_dhw_type type [enum]
# TYPE emsesp_boiler_dhw_type gauge
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="off"} 0
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="flow"} 0
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="buffered flow"} 0
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="buffer"} 1
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="layered buffer"} 0

# HELP emsesp_boiler_dhw_comfort comfort [enum]
# TYPE emsesp_boiler_dhw_comfort gauge
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="hot"} 1
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="eco"} 0
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="intelligent"} 0

# HELP emsesp_boiler_dhw_flowtempoffset flow temperature offset [C]
# TYPE emsesp_boiler_dhw_flowtempoffset gauge
emsesp_boiler_dhw_flowtempoffset 20

# HELP emsesp_boiler_dhw_circpump circulation pump available [boolean]
# TYPE emsesp_boiler_dhw_circpump gauge
emsesp_boiler_dhw_circpump 1

# HELP emsesp_boiler_dhw_chargetype charging type [enum]
# TYPE emsesp_boiler_dhw_chargetype gauge
emsesp_boiler_dhw_chargetype{emsesp_boiler_dhw_chargetype="chargepump"} 0
emsesp_boiler_dhw_chargetype{emsesp_boiler_dhw_chargetype="3-way valve"} 1

# HELP emsesp_boiler_dhw_hyston hysteresis on temperature [C]
# TYPE emsesp_boiler_dhw_hyston gauge
emsesp_boiler_dhw_hyston -11

# HELP emsesp_boiler_dhw_hystoff hysteresis off temperature [C]
# TYPE emsesp_boiler_dhw_hystoff gauge
emsesp_boiler_dhw_hystoff 0

# HELP emsesp_boiler_dhw_disinfectiontemp disinfection temperature [C]
# TYPE emsesp_boiler_dhw_disinfectiontemp gauge
emsesp_boiler_dhw_disinfectiontemp 70

# HELP emsesp_boiler_dhw_circmode circulation pump mode [enum]
# TYPE emsesp_boiler_dhw_circmode gauge
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="off"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="1x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="2x3min"} 1
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="3x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="4x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="5x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="6x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="continuous"} 0

# HELP emsesp_boiler_dhw_circ circulation active [boolean]
# TYPE emsesp_boiler_dhw_circ gauge
emsesp_boiler_dhw_circ 0

# HELP emsesp_boiler_dhw_curtemp current intern temperature [C]
# TYPE emsesp_boiler_dhw_curtemp gauge
emsesp_boiler_dhw_curtemp 46.1

# HELP emsesp_boiler_dhw_curtemp2 current extern temperature [C]
# TYPE emsesp_boiler_dhw_curtemp2 gauge
emsesp_boiler_dhw_curtemp2 60.2

# HELP emsesp_boiler_dhw_curflow current tap water flow [l/min]
# TYPE emsesp_boiler_dhw_curflow gauge
emsesp_boiler_dhw_curflow 0

# HELP emsesp_boiler_dhw_storagetemp1 storage intern temperature [C]
# TYPE emsesp_boiler_dhw_storagetemp1 gauge
emsesp_boiler_dhw_storagetemp1 46

# HELP emsesp_boiler_dhw_storagetemp2 storage extern temperature [C]
# TYPE emsesp_boiler_dhw_storagetemp2 gauge
emsesp_boiler_dhw_storagetemp2 60.2

# HELP emsesp_boiler_dhw_activated activated [boolean]
# TYPE emsesp_boiler_dhw_activated gauge
emsesp_boiler_dhw_activated 1

# HELP emsesp_boiler_dhw_onetime one time charging [boolean]
# TYPE emsesp_boiler_dhw_onetime gauge
emsesp_boiler_dhw_onetime 0

# HELP emsesp_boiler_dhw_disinfecting disinfecting [boolean]
# TYPE emsesp_boiler_dhw_disinfecting gauge
emsesp_boiler_dhw_disinfecting 0

# HELP emsesp_boiler_dhw_charging charging [boolean]
# TYPE emsesp_boiler_dhw_charging gauge
emsesp_boiler_dhw_charging 0

# HELP emsesp_boiler_dhw_recharging recharging [boolean]
# TYPE emsesp_boiler_dhw_recharging gauge
emsesp_boiler_dhw_recharging 0

# HELP emsesp_boiler_dhw_tempok temperature ok [boolean]
# TYPE emsesp_boiler_dhw_tempok gauge
emsesp_boiler_dhw_tempok 1

# HELP emsesp_boiler_dhw_active active [boolean]
# TYPE emsesp_boiler_dhw_active gauge
emsesp_boiler_dhw_active 0

# HELP emsesp_boiler_dhw_3wayvalve 3-way valve active [boolean]
# TYPE emsesp_boiler_dhw_3wayvalve gauge
emsesp_boiler_dhw_3wayvalve 0

# HELP emsesp_boiler_dhw_starts starts [number]
# TYPE emsesp_boiler_dhw_starts counter
emsesp_boiler_dhw_starts 29533

# HELP emsesp_boiler_dhw_workm active time [seconds]
# TYPE emsesp_boiler_dhw_workm counter
emsesp_boiler_dhw_workm 11575020

# HELP emsesp_boiler_dhw_nrg energy [kWh]
# TYPE emsesp_boiler_dhw_nrg counter
emsesp_boiler_dhw_nrg 0
"
`;

exports[`handles entity-based metrics v3.7 1`] = `
"# HELP emsesp_system_version EMS-ESP version
# TYPE emsesp_system_version gauge
emsesp_system_version{emsesp_system_version="3.7.1"} 1

# HELP emsesp_boiler_heatingoff force heating off [boolean]
# TYPE emsesp_boiler_heatingoff gauge
emsesp_boiler_heatingoff 0

# HELP emsesp_boiler_heatingactive heating active [boolean]
# TYPE emsesp_boiler_heatingactive gauge
emsesp_boiler_heatingactive 0

# HELP emsesp_boiler_tapwateractive tapwater active [boolean]
# TYPE emsesp_boiler_tapwateractive gauge
emsesp_boiler_tapwateractive 0

# HELP emsesp_boiler_selflowtemp selected flow temperature [°C]
# TYPE emsesp_boiler_selflowtemp gauge
emsesp_boiler_selflowtemp 7

# HELP emsesp_boiler_heatingpumpmod heating pump modulation [%]
# TYPE emsesp_boiler_heatingpumpmod gauge
emsesp_boiler_heatingpumpmod 0

# HELP emsesp_boiler_curflowtemp current flow temperature [°C]
# TYPE emsesp_boiler_curflowtemp gauge
emsesp_boiler_curflowtemp 51.8

# HELP emsesp_boiler_rettemp return temperature [°C]
# TYPE emsesp_boiler_rettemp gauge
emsesp_boiler_rettemp 56.1

# HELP emsesp_boiler_switchtemp mixing switch temperature [°C]
# TYPE emsesp_boiler_switchtemp gauge
emsesp_boiler_switchtemp 0

# HELP emsesp_boiler_syspress system pressure [bar]
# TYPE emsesp_boiler_syspress gauge
emsesp_boiler_syspress 0.9

# HELP emsesp_boiler_boiltemp actual boiler temperature [°C]
# TYPE emsesp_boiler_boiltemp gauge
emsesp_boiler_boiltemp 60.5

# HELP emsesp_boiler_burngas gas [boolean]
# TYPE emsesp_boiler_burngas gauge
emsesp_boiler_burngas 0

# HELP emsesp_boiler_burngas2 gas stage 2 [boolean]
# TYPE emsesp_boiler_burngas2 gauge
emsesp_boiler_burngas2 0

# HELP emsesp_boiler_flamecurr flame current [µA]
# TYPE emsesp_boiler_flamecurr gauge
emsesp_boiler_flamecurr 0

# HELP emsesp_boiler_fanwork fan [boolean]
# TYPE emsesp_boiler_fanwork gauge
emsesp_boiler_fanwork 0

# HELP emsesp_boiler_ignwork ignition [boolean]
# TYPE emsesp_boiler_ignwork gauge
emsesp_boiler_ignwork 0

# HELP emsesp_boiler_oilpreheat oil preheating [boolean]
# TYPE emsesp_boiler_oilpreheat gauge
emsesp_boiler_oilpreheat 0

# HELP emsesp_boiler_burnminpower burner min power [%]
# TYPE emsesp_boiler_burnminpower gauge
emsesp_boiler_burnminpower 0

# HELP emsesp_boiler_burnmaxpower burner max power [%]
# TYPE emsesp_boiler_burnmaxpower gauge
emsesp_boiler_burnmaxpower 0.8

# HELP emsesp_boiler_burnminperiod burner min period [seconds]
# TYPE emsesp_boiler_burnminperiod gauge
emsesp_boiler_burnminperiod 600

# HELP emsesp_boiler_boilhyston hysteresis on temperature [°C]
# TYPE emsesp_boiler_boilhyston gauge
emsesp_boiler_boilhyston -6

# HELP emsesp_boiler_boilhystoff hysteresis off temperature [°C]
# TYPE emsesp_boiler_boilhystoff gauge
emsesp_boiler_boilhystoff 6

# HELP emsesp_boiler_heatingactivated heating activated [boolean]
# TYPE emsesp_boiler_heatingactivated gauge
emsesp_boiler_heatingactivated 1

# HELP emsesp_boiler_heatingtemp heating temperature [°C]
# TYPE emsesp_boiler_heatingtemp gauge
emsesp_boiler_heatingtemp 80

# HELP emsesp_boiler_heatingpump heating pump [boolean]
# TYPE emsesp_boiler_heatingpump gauge
emsesp_boiler_heatingpump 0

# HELP emsesp_boiler_pumpmodmax boiler pump max power [%]
# TYPE emsesp_boiler_pumpmodmax gauge
emsesp_boiler_pumpmodmax 1

# HELP emsesp_boiler_pumpmodmin boiler pump min power [%]
# TYPE emsesp_boiler_pumpmodmin gauge
emsesp_boiler_pumpmodmin 0.6

# HELP emsesp_boiler_pumpmode boiler pump mode [enum]
# TYPE emsesp_boiler_pumpmode gauge
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="proportional"} 1
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-1"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-2"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-3"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-4"} 0

# HELP emsesp_boiler_pumpdelay pump delay [seconds]
# TYPE emsesp_boiler_pumpdelay gauge
emsesp_boiler_pumpdelay 720

# HELP emsesp_boiler_selburnpow burner selected max power [%]
# TYPE emsesp_boiler_selburnpow gauge
emsesp_boiler_selburnpow 0

# HELP emsesp_boiler_curburnpow burner current power [%]
# TYPE emsesp_boiler_curburnpow gauge
emsesp_boiler_curburnpow 0

# HELP emsesp_boiler_burnstarts burner starts [number]
# TYPE emsesp_boiler_burnstarts gauge
emsesp_boiler_burnstarts 136578

# HELP emsesp_boiler_burnworkmin total burner operating time [seconds]
# TYPE emsesp_boiler_burnworkmin gauge
emsesp_boiler_burnworkmin 71373120

# HELP emsesp_boiler_burn2workmin burner stage 2 operating time [seconds]
# TYPE emsesp_boiler_burn2workmin gauge
emsesp_boiler_burn2workmin 0

# HELP emsesp_boiler_heatworkmin total heat operating time [seconds]
# TYPE emsesp_boiler_heatworkmin gauge
emsesp_boiler_heatworkmin 59797800

# HELP emsesp_boiler_heatstarts burner starts heating [number]
# TYPE emsesp_boiler_heatstarts gauge
emsesp_boiler_heatstarts 107044

# HELP emsesp_boiler_ubauptime total UBA operating time [seconds]
# TYPE emsesp_boiler_ubauptime gauge
emsesp_boiler_ubauptime 537011280

# HELP emsesp_boiler_servicecode service code [string]
# TYPE emsesp_boiler_servicecode gauge
emsesp_boiler_servicecode{emsesp_boiler_servicecode="0H"} 1

# HELP emsesp_boiler_servicecodenumber service code number [number]
# TYPE emsesp_boiler_servicecodenumber gauge
emsesp_boiler_servicecodenumber 203

# HELP emsesp_boiler_maintenancemessage maintenance message [string]
# TYPE emsesp_boiler_maintenancemessage gauge
emsesp_boiler_maintenancemessage{emsesp_boiler_maintenancemessage="H00"} 1

# HELP emsesp_boiler_maintenance maintenance scheduled [enum]
# TYPE emsesp_boiler_maintenance gauge
emsesp_boiler_maintenance{emsesp_boiler_maintenance="off"} 1
emsesp_boiler_maintenance{emsesp_boiler_maintenance="time"} 0
emsesp_boiler_maintenance{emsesp_boiler_maintenance="date"} 0
emsesp_boiler_maintenance{emsesp_boiler_maintenance="manual"} 0

# HELP emsesp_boiler_maintenancetime time to next maintenance [hours]
# TYPE emsesp_boiler_maintenancetime gauge
emsesp_boiler_maintenancetime 6000

# HELP emsesp_boiler_maintenancedate next maintenance date [string]
# TYPE emsesp_boiler_maintenancedate gauge
emsesp_boiler_maintenancedate{emsesp_boiler_maintenancedate="01.01.2004"} 1

# HELP emsesp_boiler_dhw_settemp dhw set temperature [°C]
# TYPE emsesp_boiler_dhw_settemp gauge
emsesp_boiler_dhw_settemp 61

# HELP emsesp_boiler_dhw_seltemp dhw selected temperature [°C]
# TYPE emsesp_boiler_dhw_seltemp gauge
emsesp_boiler_dhw_seltemp 60

# HELP emsesp_boiler_dhw_type dhw type [enum]
# TYPE emsesp_boiler_dhw_type gauge
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="off"} 0
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="flow"} 0
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="buffered flow"} 0
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="buffer"} 1
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="layered buffer"} 0

# HELP emsesp_boiler_dhw_comfort dhw comfort [enum]
# TYPE emsesp_boiler_dhw_comfort gauge
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="hot"} 1
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="eco"} 0
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="intelligent"} 0

# HELP emsesp_boiler_dhw_flowtempoffset dhw flow temperature offset [°C]
# TYPE emsesp_boiler_dhw_flowtempoffset gauge
emsesp_boiler_dhw_flowtempoffset 20

# HELP emsesp_boiler_dhw_circpump dhw circulation pump available [boolean]
# TYPE emsesp_boiler_dhw_circpump gauge
emsesp_boiler_dhw_circpump 1

# HELP emsesp_boiler_dhw_chargetype dhw charging type [enum]
# TYPE emsesp_boiler_dhw_chargetype gauge
emsesp_boiler_dhw_chargetype{emsesp_boiler_dhw_chargetype="chargepump"} 0
emsesp_boiler_dhw_chargetype{emsesp_boiler_dhw_chargetype="3-way valve"} 1

# HELP emsesp_boiler_dhw_hyston dhw hysteresis on temperature [°C]
# TYPE emsesp_boiler_dhw_hyston gauge
emsesp_boiler_dhw_hyston -11

# HELP emsesp_boiler_dhw_hystoff dhw hysteresis off temperature [°C]
# TYPE emsesp_boiler_dhw_hystoff gauge
emsesp_boiler_dhw_hystoff 0

# HELP emsesp_boiler_dhw_disinfectiontemp dhw disinfection temperature [°C]
# TYPE emsesp_boiler_dhw_disinfectiontemp gauge
emsesp_boiler_dhw_disinfectiontemp 70

# HELP emsesp_boiler_dhw_circmode dhw circulation pump mode [enum]
# TYPE emsesp_boiler_dhw_circmode gauge
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="off"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="1x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="2x3min"} 1
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="3x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="4x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="5x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="6x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="continuous"} 0

# HELP emsesp_boiler_dhw_circ dhw circulation active [boolean]
# TYPE emsesp_boiler_dhw_circ gauge
emsesp_boiler_dhw_circ 0

# HELP emsesp_boiler_dhw_curtemp dhw current intern temperature [°C]
# TYPE emsesp_boiler_dhw_curtemp gauge
emsesp_boiler_dhw_curtemp 46.8

# HELP emsesp_boiler_dhw_curtemp2 dhw current extern temperature [°C]
# TYPE emsesp_boiler_dhw_curtemp2 gauge
emsesp_boiler_dhw_curtemp2 60.1

# HELP emsesp_boiler_dhw_curflow dhw current tap water flow [l/min]
# TYPE emsesp_boiler_dhw_curflow gauge
emsesp_boiler_dhw_curflow 0

# HELP emsesp_boiler_dhw_storagetemp1 dhw storage intern temperature [°C]
# TYPE emsesp_boiler_dhw_storagetemp1 gauge
emsesp_boiler_dhw_storagetemp1 46.6

# HELP emsesp_boiler_dhw_storagetemp2 dhw storage extern temperature [°C]
# TYPE emsesp_boiler_dhw_storagetemp2 gauge
emsesp_boiler_dhw_storagetemp2 59.9

# HELP emsesp_boiler_dhw_activated dhw activated [boolean]
# TYPE emsesp_boiler_dhw_activated gauge
emsesp_boiler_dhw_activated 1

# HELP emsesp_boiler_dhw_onetime dhw one time charging [boolean]
# TYPE emsesp_boiler_dhw_onetime gauge
emsesp_boiler_dhw_onetime 0

# HELP emsesp_boiler_dhw_disinfecting dhw disinfecting [boolean]
# TYPE emsesp_boiler_dhw_disinfecting gauge
emsesp_boiler_dhw_disinfecting 0

# HELP emsesp_boiler_dhw_charging dhw charging [boolean]
# TYPE emsesp_boiler_dhw_charging gauge
emsesp_boiler_dhw_charging 0

# HELP emsesp_boiler_dhw_recharging dhw recharging [boolean]
# TYPE emsesp_boiler_dhw_recharging gauge
emsesp_boiler_dhw_recharging 0

# HELP emsesp_boiler_dhw_tempok dhw temperature ok [boolean]
# TYPE emsesp_boiler_dhw_tempok gauge
emsesp_boiler_dhw_tempok 1

# HELP emsesp_boiler_dhw_active dhw active [boolean]
# TYPE emsesp_boiler_dhw_active gauge
emsesp_boiler_dhw_active 0

# HELP emsesp_boiler_dhw_3wayvalve dhw 3-way valve active [boolean]
# TYPE emsesp_boiler_dhw_3wayvalve gauge
emsesp_boiler_dhw_3wayvalve 0

# HELP emsesp_boiler_dhw_starts dhw starts [number]
# TYPE emsesp_boiler_dhw_starts gauge
emsesp_boiler_dhw_starts 29534

# HELP emsesp_boiler_dhw_workm dhw active time [seconds]
# TYPE emsesp_boiler_dhw_workm gauge
emsesp_boiler_dhw_workm 11575320

# HELP emsesp_boiler_nompower nominal Power [kW]
# TYPE emsesp_boiler_nompower gauge
emsesp_boiler_nompower 30

# HELP emsesp_boiler_nrgtotal total energy [kWh]
# TYPE emsesp_boiler_nrgtotal gauge
emsesp_boiler_nrgtotal 67.7

# HELP emsesp_boiler_nrgheat energy heating [kWh]
# TYPE emsesp_boiler_nrgheat counter
emsesp_boiler_nrgheat 67.23

# HELP emsesp_boiler_dhw_nrg dhw energy [kWh]
# TYPE emsesp_boiler_dhw_nrg counter
emsesp_boiler_dhw_nrg 0.47
"
`;

exports[`handles localized entities response 1`] = `
"# HELP emsesp_system_version EMS-ESP version
# TYPE emsesp_system_version gauge
emsesp_system_version{emsesp_system_version="3.7.1"} 1

# HELP emsesp_boiler_heatingoff vynútené vypnutie kúrenia [boolean]
# TYPE emsesp_boiler_heatingoff gauge
emsesp_boiler_heatingoff 0

# HELP emsesp_boiler_heatingactive vykurovanie aktívne [boolean]
# TYPE emsesp_boiler_heatingactive gauge
emsesp_boiler_heatingactive 0

# HELP emsesp_boiler_tapwateractive TÚV aktívna [boolean]
# TYPE emsesp_boiler_tapwateractive gauge
emsesp_boiler_tapwateractive 0

# HELP emsesp_boiler_selflowtemp zvolená teplota na výstupe [°C]
# TYPE emsesp_boiler_selflowtemp gauge
emsesp_boiler_selflowtemp 5

# HELP emsesp_boiler_heatingpumpmod modulácia tepelného čerpadla [%]
# TYPE emsesp_boiler_heatingpumpmod gauge
emsesp_boiler_heatingpumpmod 0

# HELP emsesp_boiler_curflowtemp aktuálna výstupná teplota [°C]
# TYPE emsesp_boiler_curflowtemp gauge
emsesp_boiler_curflowtemp 23.8

# HELP emsesp_boiler_burngas plyn [boolean]
# TYPE emsesp_boiler_burngas gauge
emsesp_boiler_burngas 0

# HELP emsesp_boiler_burngas2 plynový stupeň 2 [boolean]
# TYPE emsesp_boiler_burngas2 gauge
emsesp_boiler_burngas2 0

# HELP emsesp_boiler_flamecurr prúd plameňa [µA]
# TYPE emsesp_boiler_flamecurr gauge
emsesp_boiler_flamecurr 0

# HELP emsesp_boiler_fanwork ventilátor [boolean]
# TYPE emsesp_boiler_fanwork gauge
emsesp_boiler_fanwork 0

# HELP emsesp_boiler_ignwork zapálenie [boolean]
# TYPE emsesp_boiler_ignwork gauge
emsesp_boiler_ignwork 0

# HELP emsesp_boiler_oilpreheat predohrev oleja [boolean]
# TYPE emsesp_boiler_oilpreheat gauge
emsesp_boiler_oilpreheat 0

# HELP emsesp_boiler_burnminpower min. výkon horáka [%]
# TYPE emsesp_boiler_burnminpower gauge
emsesp_boiler_burnminpower 0

# HELP emsesp_boiler_burnmaxpower max. výkon horáka [%]
# TYPE emsesp_boiler_burnmaxpower gauge
emsesp_boiler_burnmaxpower 1

# HELP emsesp_boiler_burnminperiod minimálne obdobie horáka [minúty]
# TYPE emsesp_boiler_burnminperiod gauge
emsesp_boiler_burnminperiod 10

# HELP emsesp_boiler_boilhyston hysterézia teploty pri zapnutí [°C]
# TYPE emsesp_boiler_boilhyston gauge
emsesp_boiler_boilhyston -6

# HELP emsesp_boiler_boilhystoff hysterézia teploty pri vypnutí [°C]
# TYPE emsesp_boiler_boilhystoff gauge
emsesp_boiler_boilhystoff 6

# HELP emsesp_boiler_boil2hyston 2. stupeň hysterézie pri teplote [°C]
# TYPE emsesp_boiler_boil2hyston gauge
emsesp_boiler_boil2hyston 0

# HELP emsesp_boiler_boil2hystoff teplota vypnutia hysterézneho stupňa 2 [°C]
# TYPE emsesp_boiler_boil2hystoff gauge
emsesp_boiler_boil2hystoff 0

# HELP emsesp_boiler_curveon vykurovacia krivka zapnutá [boolean]
# TYPE emsesp_boiler_curveon gauge
emsesp_boiler_curveon 0

# HELP emsesp_boiler_curvebase základňa vykurovacej krivky [°C]
# TYPE emsesp_boiler_curvebase gauge
emsesp_boiler_curvebase 20

# HELP emsesp_boiler_curveend koniec vykurovacej krivky [°C]
# TYPE emsesp_boiler_curveend gauge
emsesp_boiler_curveend 90

# HELP emsesp_boiler_summertemp letná teplota [°C]
# TYPE emsesp_boiler_summertemp gauge
emsesp_boiler_summertemp 16

# HELP emsesp_boiler_nofrostmode nofrost režim [boolean]
# TYPE emsesp_boiler_nofrostmode gauge
emsesp_boiler_nofrostmode 0

# HELP emsesp_boiler_nofrosttemp nofrost teplota [°C]
# TYPE emsesp_boiler_nofrosttemp gauge
emsesp_boiler_nofrosttemp 5

# HELP emsesp_boiler_heatingactivated kúrenie aktivované [boolean]
# TYPE emsesp_boiler_heatingactivated gauge
emsesp_boiler_heatingactivated 1

# HELP emsesp_boiler_heatingtemp teplota vykurovania [°C]
# TYPE emsesp_boiler_heatingtemp gauge
emsesp_boiler_heatingtemp 48

# HELP emsesp_boiler_heatingpump tepelné čerpadlo [boolean]
# TYPE emsesp_boiler_heatingpump gauge
emsesp_boiler_heatingpump 0

# HELP emsesp_boiler_pumpmodmax maximálny výkon čerpadla kotla [%]
# TYPE emsesp_boiler_pumpmodmax gauge
emsesp_boiler_pumpmodmax 1

# HELP emsesp_boiler_pumpmodmin min. výkon čerpadla kotla [%]
# TYPE emsesp_boiler_pumpmodmin gauge
emsesp_boiler_pumpmodmin 0.1

# HELP emsesp_boiler_pumpmode režim kotlového čerpadla [enum]
# TYPE emsesp_boiler_pumpmode gauge
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="proporcionálne"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-1"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-2"} 1
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-3"} 0
emsesp_boiler_pumpmode{emsesp_boiler_pumpmode="deltaP-4"} 0

# HELP emsesp_boiler_pumpdelay oneskorenie čerpadla [minúty]
# TYPE emsesp_boiler_pumpdelay gauge
emsesp_boiler_pumpdelay 3

# HELP emsesp_boiler_pumpontemp teplota logiky čerpadla [°C]
# TYPE emsesp_boiler_pumpontemp gauge
emsesp_boiler_pumpontemp 0

# HELP emsesp_boiler_selburnpow horák zvolený maximálny výkon [%]
# TYPE emsesp_boiler_selburnpow gauge
emsesp_boiler_selburnpow 0

# HELP emsesp_boiler_curburnpow aktuálny výkon horáka [%]
# TYPE emsesp_boiler_curburnpow gauge
emsesp_boiler_curburnpow 0

# HELP emsesp_boiler_burnstarts štarty horáka [number]
# TYPE emsesp_boiler_burnstarts gauge
emsesp_boiler_burnstarts 26861

# HELP emsesp_boiler_burnworkmin celkový prevádzkový čas horáka [minúty]
# TYPE emsesp_boiler_burnworkmin gauge
emsesp_boiler_burnworkmin 738667

# HELP emsesp_boiler_burn2workmin doba prevádzky 2. stupňa horáka [minúty]
# TYPE emsesp_boiler_burn2workmin gauge
emsesp_boiler_burn2workmin 0

# HELP emsesp_boiler_heatworkmin celkový prevádzkový čas kúrenia [minúty]
# TYPE emsesp_boiler_heatworkmin gauge
emsesp_boiler_heatworkmin 609070

# HELP emsesp_boiler_heatstarts štarty horáka na kúrenie [number]
# TYPE emsesp_boiler_heatstarts gauge
emsesp_boiler_heatstarts 12635

# HELP emsesp_boiler_ubauptime Celkový čas chodu systému [minúty]
# TYPE emsesp_boiler_ubauptime gauge
emsesp_boiler_ubauptime 4759956

# HELP emsesp_boiler_lastcode posledný chybový kód [string]
# TYPE emsesp_boiler_lastcode gauge
emsesp_boiler_lastcode{emsesp_boiler_lastcode="6L(229) 07.12.2021 08:33 (0 min)"} 1

# HELP emsesp_boiler_servicecode servisný kód [string]
# TYPE emsesp_boiler_servicecode gauge
emsesp_boiler_servicecode{emsesp_boiler_servicecode="0H"} 1

# HELP emsesp_boiler_servicecodenumber servisný kód - číslo [number]
# TYPE emsesp_boiler_servicecodenumber gauge
emsesp_boiler_servicecodenumber 203

# HELP emsesp_boiler_maintenancemessage správa o údržbe [string]
# TYPE emsesp_boiler_maintenancemessage gauge
emsesp_boiler_maintenancemessage{emsesp_boiler_maintenancemessage="H00"} 1

# HELP emsesp_boiler_maintenance plánovaná údržba [enum]
# TYPE emsesp_boiler_maintenance gauge
emsesp_boiler_maintenance{emsesp_boiler_maintenance="vyp"} 1
emsesp_boiler_maintenance{emsesp_boiler_maintenance="čas"} 0
emsesp_boiler_maintenance{emsesp_boiler_maintenance="dátum"} 0
emsesp_boiler_maintenance{emsesp_boiler_maintenance="manuálny"} 0

# HELP emsesp_boiler_maintenancetime čas do ďalšej údržby [hodiny]
# TYPE emsesp_boiler_maintenancetime gauge
emsesp_boiler_maintenancetime 6000

# HELP emsesp_boiler_maintenancedate dátum ďalšej údržby [string]
# TYPE emsesp_boiler_maintenancedate gauge
emsesp_boiler_maintenancedate{emsesp_boiler_maintenancedate="25.06.2021"} 1

# HELP emsesp_boiler_dhw_settemp TÚV nastavená teplota [°C]
# TYPE emsesp_boiler_dhw_settemp gauge
emsesp_boiler_dhw_settemp 10

# HELP emsesp_boiler_dhw_seltemp TÚV zvolená teplota [°C]
# TYPE emsesp_boiler_dhw_seltemp gauge
emsesp_boiler_dhw_seltemp 45

# HELP emsesp_boiler_dhw_type TÚV typ [enum]
# TYPE emsesp_boiler_dhw_type gauge
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="vyp"} 0
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="tok"} 0
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="zásobníkový prietok"} 0
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="zásobník"} 1
emsesp_boiler_dhw_type{emsesp_boiler_dhw_type="vrstvený zásobník"} 0

# HELP emsesp_boiler_dhw_comfort TÚV komfort [enum]
# TYPE emsesp_boiler_dhw_comfort gauge
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="horúci"} 0
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="eko"} 1
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="inteligentný"} 0

# HELP emsesp_boiler_dhw_flowtempoffset TÚV Posun teploty prívodu [°C]
# TYPE emsesp_boiler_dhw_flowtempoffset gauge
emsesp_boiler_dhw_flowtempoffset 40

# HELP emsesp_boiler_dhw_maxpower TÚV maximálny výkon [%]
# TYPE emsesp_boiler_dhw_maxpower gauge
emsesp_boiler_dhw_maxpower 1

# HELP emsesp_boiler_dhw_circpump TÚV dostupné obehové čerpadlo [boolean]
# TYPE emsesp_boiler_dhw_circpump gauge
emsesp_boiler_dhw_circpump 1

# HELP emsesp_boiler_dhw_chargetype TÚV typ nabíjania [enum]
# TYPE emsesp_boiler_dhw_chargetype gauge
emsesp_boiler_dhw_chargetype{emsesp_boiler_dhw_chargetype="nabíjacie čerpadlo"} 0
emsesp_boiler_dhw_chargetype{emsesp_boiler_dhw_chargetype="3-cestný ventil"} 1

# HELP emsesp_boiler_dhw_hyston TÚV hysterézia teploty [°C]
# TYPE emsesp_boiler_dhw_hyston gauge
emsesp_boiler_dhw_hyston -5

# HELP emsesp_boiler_dhw_hystoff TÚV teplota hysterézie [°C]
# TYPE emsesp_boiler_dhw_hystoff gauge
emsesp_boiler_dhw_hystoff 0

# HELP emsesp_boiler_dhw_disinfectiontemp TÚV teplota dezinfekcie [°C]
# TYPE emsesp_boiler_dhw_disinfectiontemp gauge
emsesp_boiler_dhw_disinfectiontemp 70

# HELP emsesp_boiler_dhw_circmode TÚV režim obehového čerpadla [enum]
# TYPE emsesp_boiler_dhw_circmode gauge
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="vyp"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="1x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="2x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="3x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="4x3min"} 1
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="5x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="6x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="nepretržité"} 0

# HELP emsesp_boiler_dhw_circ TÚV obeh aktívny [boolean]
# TYPE emsesp_boiler_dhw_circ gauge
emsesp_boiler_dhw_circ 0

# HELP emsesp_boiler_dhw_curtemp TÚV aktuálna vnútorná teplota [°C]
# TYPE emsesp_boiler_dhw_curtemp gauge
emsesp_boiler_dhw_curtemp 33.2

# HELP emsesp_boiler_dhw_curtemp2 TÚV aktuálna vonkajšia teplota [°C]
# TYPE emsesp_boiler_dhw_curtemp2 gauge
emsesp_boiler_dhw_curtemp2 33.2

# HELP emsesp_boiler_dhw_curflow TÚV aktuálny prietok vody z vodovodu [l/min]
# TYPE emsesp_boiler_dhw_curflow gauge
emsesp_boiler_dhw_curflow 0

# HELP emsesp_boiler_dhw_storagetemp2 TÚV vonkajšia teplota skladovania [°C]
# TYPE emsesp_boiler_dhw_storagetemp2 gauge
emsesp_boiler_dhw_storagetemp2 33.2

# HELP emsesp_boiler_dhw_activated TÚV aktivovaný [boolean]
# TYPE emsesp_boiler_dhw_activated gauge
emsesp_boiler_dhw_activated 1

# HELP emsesp_boiler_dhw_onetime TÚV jednorazové nabíjanie [boolean]
# TYPE emsesp_boiler_dhw_onetime gauge
emsesp_boiler_dhw_onetime 0

# HELP emsesp_boiler_dhw_disinfecting TÚV dezinfekcia [boolean]
# TYPE emsesp_boiler_dhw_disinfecting gauge
emsesp_boiler_dhw_disinfecting 0

# HELP emsesp_boiler_dhw_charging TÚV nabíjanie [boolean]
# TYPE emsesp_boiler_dhw_charging gauge
emsesp_boiler_dhw_charging 0

# HELP emsesp_boiler_dhw_recharging TÚV nabíjanie [boolean]
# TYPE emsesp_boiler_dhw_recharging gauge
emsesp_boiler_dhw_recharging 0

# HELP emsesp_boiler_dhw_tempok TÚV teplota ok [boolean]
# TYPE emsesp_boiler_dhw_tempok gauge
emsesp_boiler_dhw_tempok 0

# HELP emsesp_boiler_dhw_active TÚV aktívny [boolean]
# TYPE emsesp_boiler_dhw_active gauge
emsesp_boiler_dhw_active 0

# HELP emsesp_boiler_dhw_3wayvalve TÚV 3-cestný ventil aktívny [boolean]
# TYPE emsesp_boiler_dhw_3wayvalve gauge
emsesp_boiler_dhw_3wayvalve 0

# HELP emsesp_boiler_dhw_starts TÚV Počet štartov [number]
# TYPE emsesp_boiler_dhw_starts gauge
emsesp_boiler_dhw_starts 14226

# HELP emsesp_boiler_dhw_workm TÚV aktívny čas [minúty]
# TYPE emsesp_boiler_dhw_workm gauge
emsesp_boiler_dhw_workm 129597

# HELP emsesp_boiler_nompower nominálny výkon [kW]
# TYPE emsesp_boiler_nompower gauge
emsesp_boiler_nompower 24

# HELP emsesp_boiler_nrgtotal celková energia [kWh]
# TYPE emsesp_boiler_nrgtotal gauge
emsesp_boiler_nrgtotal 1077.86

# HELP emsesp_boiler_nrgheat energetické vykurovanie [kWh]
# TYPE emsesp_boiler_nrgheat counter
emsesp_boiler_nrgheat 864.88

# HELP emsesp_boiler_dhw_nrg TÚV energia [kWh]
# TYPE emsesp_boiler_dhw_nrg counter
emsesp_boiler_dhw_nrg 212.98

# HELP emsesp_thermostat_datetime dátum/čas [string]
# TYPE emsesp_thermostat_datetime gauge
emsesp_thermostat_datetime{emsesp_thermostat_datetime="24.01.2025 13:44"} 1

# HELP emsesp_thermostat_intoffset odchýlka vnútornej teploty [°C]
# TYPE emsesp_thermostat_intoffset gauge
emsesp_thermostat_intoffset 0

# HELP emsesp_thermostat_floordry sušenie podlahy [enum]
# TYPE emsesp_thermostat_floordry gauge
emsesp_thermostat_floordry{emsesp_thermostat_floordry="vyp"} 1
emsesp_thermostat_floordry{emsesp_thermostat_floordry="štart"} 0
emsesp_thermostat_floordry{emsesp_thermostat_floordry="kúrenie"} 0
emsesp_thermostat_floordry{emsesp_thermostat_floordry="pauza"} 0
emsesp_thermostat_floordry{emsesp_thermostat_floordry="chladenie"} 0
emsesp_thermostat_floordry{emsesp_thermostat_floordry="koniec"} 0

# HELP emsesp_thermostat_dampedoutdoortemp tlmená vonkajšia teplota [°C]
# TYPE emsesp_thermostat_dampedoutdoortemp gauge
emsesp_thermostat_dampedoutdoortemp -10

# HELP emsesp_thermostat_floordrytemp teplota sušenia podlahy [°C]
# TYPE emsesp_thermostat_floordrytemp gauge
emsesp_thermostat_floordrytemp 0

# HELP emsesp_thermostat_building typ budovy [enum]
# TYPE emsesp_thermostat_building gauge
emsesp_thermostat_building{emsesp_thermostat_building="ľahký"} 0
emsesp_thermostat_building{emsesp_thermostat_building="stredný"} 1
emsesp_thermostat_building{emsesp_thermostat_building="ťažký"} 0

# HELP emsesp_thermostat_minexttemp minimálna vonkajšia teplota [°C]
# TYPE emsesp_thermostat_minexttemp gauge
emsesp_thermostat_minexttemp -10

# HELP emsesp_thermostat_damping tlmenie vonkajšej teploty [boolean]
# TYPE emsesp_thermostat_damping gauge
emsesp_thermostat_damping 1

# HELP emsesp_thermostat_hc1_seltemp hc1 zvolená izbová teplota [°C]
# TYPE emsesp_thermostat_hc1_seltemp gauge
emsesp_thermostat_hc1_seltemp 21.5

# HELP emsesp_thermostat_hc1_currtemp hc1 aktuálna izbová teplota [°C]
# TYPE emsesp_thermostat_hc1_currtemp gauge
emsesp_thermostat_hc1_currtemp 22.1

# HELP emsesp_thermostat_hc1_haclimate hc1 mqtt discovery aktuálna teplota v miestnosti [enum]
# TYPE emsesp_thermostat_hc1_haclimate gauge
emsesp_thermostat_hc1_haclimate{emsesp_thermostat_hc1_haclimate="zadaná teplota"} 0
emsesp_thermostat_hc1_haclimate{emsesp_thermostat_hc1_haclimate="izbová teplota"} 1

# HELP emsesp_thermostat_hc1_mode hc1 režim [enum]
# TYPE emsesp_thermostat_hc1_mode gauge
emsesp_thermostat_hc1_mode{emsesp_thermostat_hc1_mode="manuálny"} 0
emsesp_thermostat_hc1_mode{emsesp_thermostat_hc1_mode="auto"} 1

# HELP emsesp_thermostat_hc1_modetype hc1 typ režimu [enum]
# TYPE emsesp_thermostat_hc1_modetype gauge
emsesp_thermostat_hc1_modetype{emsesp_thermostat_hc1_modetype="eko"} 1
emsesp_thermostat_hc1_modetype{emsesp_thermostat_hc1_modetype="komfortný"} 0

# HELP emsesp_thermostat_hc1_ecotemp hc1 eko teplota [°C]
# TYPE emsesp_thermostat_hc1_ecotemp gauge
emsesp_thermostat_hc1_ecotemp 21

# HELP emsesp_thermostat_hc1_manualtemp hc1 manuálna teplota [°C]
# TYPE emsesp_thermostat_hc1_manualtemp gauge
emsesp_thermostat_hc1_manualtemp 20.5

# HELP emsesp_thermostat_hc1_comforttemp hc1 komfortná teplota [°C]
# TYPE emsesp_thermostat_hc1_comforttemp gauge
emsesp_thermostat_hc1_comforttemp 22

# HELP emsesp_thermostat_hc1_summertemp hc1 letná teplota [°C]
# TYPE emsesp_thermostat_hc1_summertemp gauge
emsesp_thermostat_hc1_summertemp 17

# HELP emsesp_thermostat_hc1_designtemp hc1 návrhová teplota [°C]
# TYPE emsesp_thermostat_hc1_designtemp gauge
emsesp_thermostat_hc1_designtemp 75

# HELP emsesp_thermostat_hc1_offsettemp hc1 offsetová teplota [°C]
# TYPE emsesp_thermostat_hc1_offsettemp gauge
emsesp_thermostat_hc1_offsettemp 0

# HELP emsesp_thermostat_hc1_minflowtemp hc1 min. výstupná teplota [°C]
# TYPE emsesp_thermostat_hc1_minflowtemp gauge
emsesp_thermostat_hc1_minflowtemp 25

# HELP emsesp_thermostat_hc1_maxflowtemp hc1 maximálna teplota prívodu [°C]
# TYPE emsesp_thermostat_hc1_maxflowtemp gauge
emsesp_thermostat_hc1_maxflowtemp 65

# HELP emsesp_thermostat_hc1_roominfluence hc1 vplyv miestnosti [°C]
# TYPE emsesp_thermostat_hc1_roominfluence gauge
emsesp_thermostat_hc1_roominfluence 3

# HELP emsesp_thermostat_hc1_roominflfactor hc1 faktor vplyvu miestnosti [number]
# TYPE emsesp_thermostat_hc1_roominflfactor gauge
emsesp_thermostat_hc1_roominflfactor 4

# HELP emsesp_thermostat_hc1_curroominfl hc1 aktuálny vplyv miestnosti [°C]
# TYPE emsesp_thermostat_hc1_curroominfl gauge
emsesp_thermostat_hc1_curroominfl 0

# HELP emsesp_thermostat_hc1_nofrostmode hc1 nofrost režim [enum]
# TYPE emsesp_thermostat_hc1_nofrostmode gauge
emsesp_thermostat_hc1_nofrostmode{emsesp_thermostat_hc1_nofrostmode="izba"} 1
emsesp_thermostat_hc1_nofrostmode{emsesp_thermostat_hc1_nofrostmode="vonku"} 0
emsesp_thermostat_hc1_nofrostmode{emsesp_thermostat_hc1_nofrostmode="miestnosť vonku"} 0

# HELP emsesp_thermostat_hc1_nofrosttemp hc1 nofrost teplota [°C]
# TYPE emsesp_thermostat_hc1_nofrosttemp gauge
emsesp_thermostat_hc1_nofrosttemp 5

# HELP emsesp_thermostat_hc1_targetflowtemp hc1 cieľová teplota prívodu [°C]
# TYPE emsesp_thermostat_hc1_targetflowtemp gauge
emsesp_thermostat_hc1_targetflowtemp 0

# HELP emsesp_thermostat_hc1_heatingtype hc1 typ vykurovania [enum]
# TYPE emsesp_thermostat_hc1_heatingtype gauge
emsesp_thermostat_hc1_heatingtype{emsesp_thermostat_hc1_heatingtype="vyp"} 0
emsesp_thermostat_hc1_heatingtype{emsesp_thermostat_hc1_heatingtype="radiátor"} 1
emsesp_thermostat_hc1_heatingtype{emsesp_thermostat_hc1_heatingtype="konvektor"} 0
emsesp_thermostat_hc1_heatingtype{emsesp_thermostat_hc1_heatingtype="podlaha"} 0

# HELP emsesp_thermostat_hc1_summersetmode hc1 nastaviť letný režim [enum]
# TYPE emsesp_thermostat_hc1_summersetmode gauge
emsesp_thermostat_hc1_summersetmode{emsesp_thermostat_hc1_summersetmode="leto"} 0
emsesp_thermostat_hc1_summersetmode{emsesp_thermostat_hc1_summersetmode="auto"} 1
emsesp_thermostat_hc1_summersetmode{emsesp_thermostat_hc1_summersetmode="zima"} 0

# HELP emsesp_thermostat_hc1_summermode hc1 letný režim [enum]
# TYPE emsesp_thermostat_hc1_summermode gauge
emsesp_thermostat_hc1_summermode{emsesp_thermostat_hc1_summermode="zima"} 1
emsesp_thermostat_hc1_summermode{emsesp_thermostat_hc1_summermode="leto"} 0

# HELP emsesp_thermostat_hc1_controlmode hc1 kontrolný režim [enum]
# TYPE emsesp_thermostat_hc1_controlmode gauge
emsesp_thermostat_hc1_controlmode{emsesp_thermostat_hc1_controlmode="kompenzácia počasia"} 0
emsesp_thermostat_hc1_controlmode{emsesp_thermostat_hc1_controlmode="vonkajší základný bod"} 0
emsesp_thermostat_hc1_controlmode{emsesp_thermostat_hc1_controlmode="n/a"} 0
emsesp_thermostat_hc1_controlmode{emsesp_thermostat_hc1_controlmode="izba"} 1
emsesp_thermostat_hc1_controlmode{emsesp_thermostat_hc1_controlmode="výkon"} 0
emsesp_thermostat_hc1_controlmode{emsesp_thermostat_hc1_controlmode="konštantný"} 0

# HELP emsesp_thermostat_hc1_program hc1 program [enum]
# TYPE emsesp_thermostat_hc1_program gauge
emsesp_thermostat_hc1_program{emsesp_thermostat_hc1_program="prog 1"} 0
emsesp_thermostat_hc1_program{emsesp_thermostat_hc1_program="prog 2"} 1

# HELP emsesp_thermostat_hc1_tempautotemp hc1 automatický režim dočasnej nastavenej teploty [°C]
# TYPE emsesp_thermostat_hc1_tempautotemp gauge
emsesp_thermostat_hc1_tempautotemp 21.5

# HELP emsesp_thermostat_hc1_fastheatup hc1 rýchle zahriatie [%]
# TYPE emsesp_thermostat_hc1_fastheatup gauge
emsesp_thermostat_hc1_fastheatup 0

# HELP emsesp_thermostat_hc1_switchonoptimization hc1 optimalizácia pri zapnutí [boolean]
# TYPE emsesp_thermostat_hc1_switchonoptimization gauge
emsesp_thermostat_hc1_switchonoptimization 0

# HELP emsesp_thermostat_hc1_reducemode hc1 znížený režim [enum]
# TYPE emsesp_thermostat_hc1_reducemode gauge
emsesp_thermostat_hc1_reducemode{emsesp_thermostat_hc1_reducemode="vonku"} 0
emsesp_thermostat_hc1_reducemode{emsesp_thermostat_hc1_reducemode="izba"} 0
emsesp_thermostat_hc1_reducemode{emsesp_thermostat_hc1_reducemode="znížený"} 1

# HELP emsesp_thermostat_hc1_noreducetemp hc1 žiadne zníženie teploty pod teplotu [°C]
# TYPE emsesp_thermostat_hc1_noreducetemp gauge
emsesp_thermostat_hc1_noreducetemp -31

# HELP emsesp_thermostat_hc1_reducetemp hc1 vypnúť/znížiť teplotu spínača [°C]
# TYPE emsesp_thermostat_hc1_reducetemp gauge
emsesp_thermostat_hc1_reducetemp 5

# HELP emsesp_thermostat_hc1_coolingon hc1 chladenie [boolean]
# TYPE emsesp_thermostat_hc1_coolingon gauge
emsesp_thermostat_hc1_coolingon 0

# HELP emsesp_thermostat_hc1_hpmode hc1 Režim HP [enum]
# TYPE emsesp_thermostat_hc1_hpmode gauge
emsesp_thermostat_hc1_hpmode{emsesp_thermostat_hc1_hpmode="kúrenie"} 1
emsesp_thermostat_hc1_hpmode{emsesp_thermostat_hc1_hpmode="chladenie"} 0
emsesp_thermostat_hc1_hpmode{emsesp_thermostat_hc1_hpmode="kúrenie a chladenie"} 0

# HELP emsesp_thermostat_hc1_control hc1 ovládacie zariadenie [enum]
# TYPE emsesp_thermostat_hc1_control gauge
emsesp_thermostat_hc1_control{emsesp_thermostat_hc1_control="RC310"} 1
emsesp_thermostat_hc1_control{emsesp_thermostat_hc1_control="RC200"} 0
emsesp_thermostat_hc1_control{emsesp_thermostat_hc1_control="RC100"} 0
emsesp_thermostat_hc1_control{emsesp_thermostat_hc1_control="RC100H"} 0
emsesp_thermostat_hc1_control{emsesp_thermostat_hc1_control="TC100"} 0

# HELP emsesp_thermostat_dhw_mode TÚV režim [enum]
# TYPE emsesp_thermostat_dhw_mode gauge
emsesp_thermostat_dhw_mode{emsesp_thermostat_dhw_mode="vyp"} 0
emsesp_thermostat_dhw_mode{emsesp_thermostat_dhw_mode="normálny"} 0
emsesp_thermostat_dhw_mode{emsesp_thermostat_dhw_mode="komfortný"} 0
emsesp_thermostat_dhw_mode{emsesp_thermostat_dhw_mode="auto"} 1
emsesp_thermostat_dhw_mode{emsesp_thermostat_dhw_mode="vlastný prog."} 0

# HELP emsesp_thermostat_dhw_circmode TÚV režim obehového čerpadla [enum]
# TYPE emsesp_thermostat_dhw_circmode gauge
emsesp_thermostat_dhw_circmode{emsesp_thermostat_dhw_circmode="vyp"} 0
emsesp_thermostat_dhw_circmode{emsesp_thermostat_dhw_circmode="zap"} 0
emsesp_thermostat_dhw_circmode{emsesp_thermostat_dhw_circmode="auto"} 0
emsesp_thermostat_dhw_circmode{emsesp_thermostat_dhw_circmode="vlastný prog."} 1

# HELP emsesp_thermostat_dhw_chargeduration TÚV doba nabíjania [minúty]
# TYPE emsesp_thermostat_dhw_chargeduration gauge
emsesp_thermostat_dhw_chargeduration 30

# HELP emsesp_thermostat_dhw_charge TÚV nabiť [boolean]
# TYPE emsesp_thermostat_dhw_charge gauge
emsesp_thermostat_dhw_charge 0

# HELP emsesp_thermostat_dhw_extra TÚV extra [boolean]
# TYPE emsesp_thermostat_dhw_extra gauge
emsesp_thermostat_dhw_extra 0

# HELP emsesp_thermostat_dhw_disinfecting TÚV dezinfekcia [boolean]
# TYPE emsesp_thermostat_dhw_disinfecting gauge
emsesp_thermostat_dhw_disinfecting 0

# HELP emsesp_thermostat_dhw_disinfectday TÚV deň dezinfekcie [enum]
# TYPE emsesp_thermostat_dhw_disinfectday gauge
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="po"} 0
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="ut"} 1
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="st"} 0
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="št"} 0
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="pi"} 0
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="so"} 0
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="ne"} 0
emsesp_thermostat_dhw_disinfectday{emsesp_thermostat_dhw_disinfectday="všetko"} 0

# HELP emsesp_thermostat_dhw_disinfecttime TÚV čas na dezinfekciu [minúty]
# TYPE emsesp_thermostat_dhw_disinfecttime gauge
emsesp_thermostat_dhw_disinfecttime 120

# HELP emsesp_thermostat_dhw_dailyheating TÚV denné kúrenie [boolean]
# TYPE emsesp_thermostat_dhw_dailyheating gauge
emsesp_thermostat_dhw_dailyheating 0

# HELP emsesp_thermostat_dhw_dailyheattime TÚV denný čas vykurovania [minúty]
# TYPE emsesp_thermostat_dhw_dailyheattime gauge
emsesp_thermostat_dhw_dailyheattime 120
"
`;

exports[`handles multiple circuits 1`] = `
"# HELP emsesp_system_version EMS-ESP version
# TYPE emsesp_system_version gauge
emsesp_system_version{emsesp_system_version="3.7.2-dev.16"} 1

# HELP emsesp_boiler_heatingoff force heating off [boolean]
# TYPE emsesp_boiler_heatingoff gauge
emsesp_boiler_heatingoff 0

# HELP emsesp_boiler_heatingactive heating active [boolean]
# TYPE emsesp_boiler_heatingactive gauge
emsesp_boiler_heatingactive 0

# HELP emsesp_boiler_tapwateractive tapwater active [boolean]
# TYPE emsesp_boiler_tapwateractive gauge
emsesp_boiler_tapwateractive 1

# HELP emsesp_boiler_selflowtemp selected flow temperature [°C]
# TYPE emsesp_boiler_selflowtemp gauge
emsesp_boiler_selflowtemp 0

# HELP emsesp_boiler_curflowtemp current flow temperature [°C]
# TYPE emsesp_boiler_curflowtemp gauge
emsesp_boiler_curflowtemp 60.2

# HELP emsesp_boiler_rettemp return temperature [°C]
# TYPE emsesp_boiler_rettemp gauge
emsesp_boiler_rettemp 48.1

# HELP emsesp_boiler_syspress system pressure [bar]
# TYPE emsesp_boiler_syspress gauge
emsesp_boiler_syspress 1.4

# HELP emsesp_boiler_burngas gas [boolean]
# TYPE emsesp_boiler_burngas gauge
emsesp_boiler_burngas 1

# HELP emsesp_boiler_burngas2 gas stage 2 [boolean]
# TYPE emsesp_boiler_burngas2 gauge
emsesp_boiler_burngas2 0

# HELP emsesp_boiler_flamecurr flame current [µA]
# TYPE emsesp_boiler_flamecurr gauge
emsesp_boiler_flamecurr 37.4

# HELP emsesp_boiler_fanwork fan [boolean]
# TYPE emsesp_boiler_fanwork gauge
emsesp_boiler_fanwork 1

# HELP emsesp_boiler_ignwork ignition [boolean]
# TYPE emsesp_boiler_ignwork gauge
emsesp_boiler_ignwork 0

# HELP emsesp_boiler_oilpreheat oil preheating [boolean]
# TYPE emsesp_boiler_oilpreheat gauge
emsesp_boiler_oilpreheat 0

# HELP emsesp_boiler_heatingpump heating pump [boolean]
# TYPE emsesp_boiler_heatingpump gauge
emsesp_boiler_heatingpump 1

# HELP emsesp_boiler_selburnpow burner selected max power [%]
# TYPE emsesp_boiler_selburnpow gauge
emsesp_boiler_selburnpow 1.15

# HELP emsesp_boiler_curburnpow burner current power [%]
# TYPE emsesp_boiler_curburnpow gauge
emsesp_boiler_curburnpow 0.61

# HELP emsesp_boiler_servicecode service code [string]
# TYPE emsesp_boiler_servicecode gauge
emsesp_boiler_servicecode{emsesp_boiler_servicecode="=H"} 1

# HELP emsesp_boiler_servicecodenumber service code number [number]
# TYPE emsesp_boiler_servicecodenumber gauge
emsesp_boiler_servicecodenumber 201

# HELP emsesp_boiler_dhw_seltemp dhw selected temperature [°C]
# TYPE emsesp_boiler_dhw_seltemp gauge
emsesp_boiler_dhw_seltemp 52

# HELP emsesp_boiler_dhw_comfort dhw comfort [enum]
# TYPE emsesp_boiler_dhw_comfort gauge
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="hot"} 1
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="eco"} 0
emsesp_boiler_dhw_comfort{emsesp_boiler_dhw_comfort="intelligent"} 0

# HELP emsesp_boiler_dhw_flowtempoffset dhw flow temperature offset [°C]
# TYPE emsesp_boiler_dhw_flowtempoffset gauge
emsesp_boiler_dhw_flowtempoffset 40

# HELP emsesp_boiler_dhw_circpump dhw circulation pump available [boolean]
# TYPE emsesp_boiler_dhw_circpump gauge
emsesp_boiler_dhw_circpump 0

# HELP emsesp_boiler_dhw_chargetype dhw charging type [enum]
# TYPE emsesp_boiler_dhw_chargetype gauge
emsesp_boiler_dhw_chargetype{emsesp_boiler_dhw_chargetype="chargepump"} 0
emsesp_boiler_dhw_chargetype{emsesp_boiler_dhw_chargetype="3-way valve"} 1

# HELP emsesp_boiler_dhw_hyston dhw hysteresis on temperature [°C]
# TYPE emsesp_boiler_dhw_hyston gauge
emsesp_boiler_dhw_hyston -5

# HELP emsesp_boiler_dhw_hystoff dhw hysteresis off temperature [°C]
# TYPE emsesp_boiler_dhw_hystoff gauge
emsesp_boiler_dhw_hystoff 0

# HELP emsesp_boiler_dhw_disinfectiontemp dhw disinfection temperature [°C]
# TYPE emsesp_boiler_dhw_disinfectiontemp gauge
emsesp_boiler_dhw_disinfectiontemp 70

# HELP emsesp_boiler_dhw_circmode dhw circulation pump mode [enum]
# TYPE emsesp_boiler_dhw_circmode gauge
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="off"} 1
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="1x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="2x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="3x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="4x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="5x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="6x3min"} 0
emsesp_boiler_dhw_circmode{emsesp_boiler_dhw_circmode="continuous"} 0

# HELP emsesp_boiler_dhw_circ dhw circulation active [boolean]
# TYPE emsesp_boiler_dhw_circ gauge
emsesp_boiler_dhw_circ 0

# HELP emsesp_boiler_dhw_storagetemp1 dhw storage intern temperature [°C]
# TYPE emsesp_boiler_dhw_storagetemp1 gauge
emsesp_boiler_dhw_storagetemp1 53.8

# HELP emsesp_boiler_dhw_activated dhw activated [boolean]
# TYPE emsesp_boiler_dhw_activated gauge
emsesp_boiler_dhw_activated 1

# HELP emsesp_boiler_dhw_3wayvalve dhw 3-way valve active [boolean]
# TYPE emsesp_boiler_dhw_3wayvalve gauge
emsesp_boiler_dhw_3wayvalve 1

# HELP emsesp_boiler_nompower nominal Power [kW]
# TYPE emsesp_boiler_nompower gauge
emsesp_boiler_nompower 0

# HELP emsesp_boiler_nrgtotal total energy [kWh]
# TYPE emsesp_boiler_nrgtotal counter
emsesp_boiler_nrgtotal 0

# HELP emsesp_boiler_nrgheat energy heating [kWh]
# TYPE emsesp_boiler_nrgheat counter
emsesp_boiler_nrgheat 0

# HELP emsesp_boiler_dhw_nrg dhw energy [kWh]
# TYPE emsesp_boiler_dhw_nrg counter
emsesp_boiler_dhw_nrg 0

# HELP emsesp_thermostat_hc2_seltemp hc2 selected room temperature [°C]
# TYPE emsesp_thermostat_hc2_seltemp gauge
emsesp_thermostat_hc2_seltemp 23

# HELP emsesp_thermostat_hc2_currtemp hc2 current room temperature [°C]
# TYPE emsesp_thermostat_hc2_currtemp gauge
emsesp_thermostat_hc2_currtemp 20.7

# HELP emsesp_thermostat_hc2_haclimate hc2 mqtt discovery current room temperature [enum]
# TYPE emsesp_thermostat_hc2_haclimate gauge
emsesp_thermostat_hc2_haclimate{emsesp_thermostat_hc2_haclimate="selTemp"} 0
emsesp_thermostat_hc2_haclimate{emsesp_thermostat_hc2_haclimate="roomTemp"} 1

# HELP emsesp_thermostat_hc2_modetype hc2 mode type [enum]
# TYPE emsesp_thermostat_hc2_modetype gauge
emsesp_thermostat_hc2_modetype{emsesp_thermostat_hc2_modetype="eco"} 0
emsesp_thermostat_hc2_modetype{emsesp_thermostat_hc2_modetype="comfort"} 1

# HELP emsesp_thermostat_hc2_targetflowtemp hc2 target flow temperature [°C]
# TYPE emsesp_thermostat_hc2_targetflowtemp gauge
emsesp_thermostat_hc2_targetflowtemp 0

# HELP emsesp_thermostat_hc2_summermode hc2 summer mode [enum]
# TYPE emsesp_thermostat_hc2_summermode gauge
emsesp_thermostat_hc2_summermode{emsesp_thermostat_hc2_summermode="winter"} 1
emsesp_thermostat_hc2_summermode{emsesp_thermostat_hc2_summermode="summer"} 0
"
`;

exports[`handles system metrics v3.5 1`] = `
"# HELP emsesp_system_version EMS-ESP version
# TYPE emsesp_system_version gauge
emsesp_system_version{emsesp_system_version="3.5.1-dev.0"} 1
"
`;

exports[`handles system metrics v3.7 1`] = `
"# HELP emsesp_system_version EMS-ESP version
# TYPE emsesp_system_version gauge
emsesp_system_version{emsesp_system_version="3.7.1"} 1
"
`;
